add - Added new localized strings (Multivars)
---

We've added new localized strings.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/arb.json
@@ -4312,6 +4312,109 @@
     "'anzimat al'alwan min Zorin OS, nuskhat fareiat ghayr rasmiat min nizam tashghil Linux alshahiri, Ubuntu",
     "al'iidafat - alkimya'",
     "al'iidafat - altaedilat",
-    "al'iidafat - al'ayqunat"
+    "al'iidafat - al'ayqunat",
+    "ma hi althaqafat alati yatimu astikhdamuha litaghyir 'asma' al'ashhur waltaqwim wama 'iilaa dhalika?",
+    "tamkin 'adawat \"alsafhat alrayiysiat li Nitrocid\"",
+    "tamkin 'adawat \"alsafhat alrayiysiat li Nitrocid\" ealaa aljanib al'ayman min alshaashati.",
+    "tamkin mujaz RSS la \"alsafhat alrayiysiat li Nitrocid\"",
+    "tamkin 'adat mujaz RSS la \"alsafhat alrayiysiat li Nitrocid\" ealaa aljanib al'ayman min alshaashati.",
+    "'ada \"alsafhat alrayiysiat li Nitrocid\"",
+    "tahdid 'adat sayatimu earduha fi \"alsafhat alrayiysiat li Nitrocid\".",
+    "'iiedadat hudud al'iishearat",
+    "yutih lak hadha takwin hudud al'iishearat",
+    "'iiedadat alhudud aleama",
+    "yutih lak hadha takwin alhudud aleama",
+    "'iiedadat almazhar",
+    "yutih lak hadha takwin mazhar munhadar alsaaeat",
+    "yutih lak hadha takwin lawn munhadar alsaaeat",
+    "yutih lak hadha takwin mazhar munhadar aldaqayiq",
+    "yutih lak hadha takwin lawn munhadar aldaqayiq",
+    "yutih lak hadha takwin mazhar munhadar althawani",
+    "yutih lak hadha takwin lawn munhadar althawani",
+    "'iiedadat lawn mawdie albidaya",
+    "yutih lak hadha takwin 'alwan mawdie albidaya",
+    "'iiedadat lawn mawdie alnihaya",
+    "yutih lak hadha takwin 'alwan mawdie alnihaya",
+    "'iiedadat sharit almunhadar",
+    "yutih lak hadha takwin sharit almunhadar",
+    "yutih lak hadha takwin mazhar almunhadar",
+    "yutih lak hadha takwin 'alwan almunhadar",
+    "'iiedadat bidayat altadaruj",
+    "yutih lak hadha takwin 'alwan tadruj albidaya",
+    "'iiedadat nihayat altadaruj",
+    "yutih lak hadha takwin 'alwan tadraj alnihaya",
+    "'aqsaa mustawaa lawn alkhalfia",
+    "'aqsaa mustawaa lawn alkhalfiati. alhadu al'adnaa lilqimat almaqbulat hu 0 walhadu al'aqsaa lilqimat almaqbulat hu 255.",
+    "'aqsaa mustawaa lawn alkhati",
+    "'aqsaa mustawaa lawn alkhut. alqimat aldunya almaqbulat hi 0 walqimat alquswaa almaqbulat hi 255.",
+    "mustawaa lawn alnasi al'aqsaa",
+    "mustawaa lawn alnasi al'aqsaa. alqimat aldunya almaqbulat hi 0 walqimat alquswaa almaqbulat hi 255.",
+    "aistakhdim thaqafat alnizam",
+    "sawa' kanat shashat altawaquf tastakhdim althaqafat alati tama dabtuha biwasitat 'iiedadat alnawat alrayiysiat 'aw biwasitat 'iiedadat shashat altawaquf hadhihi.",
+    "yutih lak hadha takwin mazhar almunhadar al'awal",
+    "nasu almaelumat li'awal",
+    "aktub kayf yuzhir nasu almaelumat alkhasi bik lilsaaeat alhaliati. {0} lilsaaeat alhaliat min 'asl 24 awlaan.",
+    "harf alzaawiat alealawiat alyusraa lilsharit al'awal",
+    "harf alzaawiat alealawiat alyumnaa lilsharit al'awal",
+    "harf alzaawiat alsufliat alyusraa lilsharit al'awal",
+    "harf alzaawiat alsufliat alyumnaa lilsharit al'awal",
+    "harf al'iitar aleulwii lilsharit al'awal",
+    "harf al'iitar alsuflii lilsharit al'awal",
+    "harf al'iitar al'aysar lilsharit al'awal",
+    "harf al'iitar al'ayman lilsharit al'awal",
+    "yutih lak hadha takwin lawn almunhadar al'awal",
+    "lawn alsharit al'awal",
+    "alhadu al'adnaa limustawaa allawn al'ahmar lilsharit al'awal",
+    "alhadu al'adnaa limustawaa allawn al'akhdar lilsharit al'awal",
+    "alhadu al'adnaa limustawaa allawn al'azraq lilsharit al'awal",
+    "alhadu al'adnaa limustawaa allawn lilsharit al'awal",
+    "alhadu al'aqsaa limustawaa allawn al'ahmar lilsharit al'awal",
+    "alhadu al'aqsaa limustawaa allawn al'akhdar lilsharit al'awal",
+    "alhadu al'aqsaa limustawaa allawn al'azraq lilsharit al'awal",
+    "alhadu al'aqsaa limustawaa allawn lilsharit al'awal",
+    "yutih lak hadha takwin mazhar almunhadar althaani",
+    "nasu almaelumat lilsharit althaani",
+    "aiktub kayf yuzhir nasu almaelumat lildaqiqat alhaliati. {0} lildaqiqat alhaliat min 60 thaniatin.",
+    "harf alzaawiat alyusraa aleulwiat lilsharit althaani",
+    "harf alzaawiat alyumnaa aleulwiat lilsharit althaani",
+    "harf alzaawiat alyusraa alsufliat lilsharit althaani",
+    "harf alzaawiat alyumnaa alsufliat lilsharit althaani",
+    "harf al'iitar aleulwii lilsharit althaani",
+    "harf al'iitar alsuflii lilsharit althaani",
+    "harf al'iitar al'aysar lilsharit althaani",
+    "harf al'iitar al'ayman lilsharit althaani",
+    "yutih lak hadha takwin lawn almunhadar althaani",
+    "lawn alsharit althaani",
+    "alhadu al'adnaa limustawaa allawn al'ahmar lilsharit althaani",
+    "alhadu al'adnaa limustawaa allawn al'akhdar lilsharit althaani",
+    "alhadu al'adnaa limustawaa allawn al'azraq lilsharit althaani",
+    "alhadu al'adnaa limustawaa allawn althaani",
+    "alhadu al'aqsaa limustawaa allawn al'ahmar lilsharit althaani",
+    "alhadu al'aqsaa limustawaa allawn al'akhdar lilsharit althaani",
+    "alhadu al'aqsaa limustawaa allawn al'azraq lilsharit althaani",
+    "alhadu al'aqsaa limustawaa allawn althaani",
+    "yutih lak hadha takwin mazhar almunhadar althaalith",
+    "harf alzaawiat alyusraa aleulwiat lilsharit althaalith",
+    "harf alzaawiat alyumnaa aleulwiat lilsharit althaalith",
+    "harf alzaawiat alyusraa alsufliat lilsharit althaalith",
+    "harf alzaawiat alyumnaa alsufliat lilsharit althaalith",
+    "harf al'iitar aleulwii lilsharit althaalith",
+    "harf al'iitar alsuflii lilsharit althaalith",
+    "harf al'iitar al'aysar lilsharit althaalith sharit",
+    "harf al'iitar al'ayman lilsharit althaalith",
+    "nasu almaelumat lilsharit althaalith",
+    "aktub kayf yazhar nasa almaelumat lilsharit althaani alhalii. {0} lilsharit althaani alhalii min 'asl 60 shrytan thalthan.",
+    "yutih lak hadha takwin lawn almunhadar althaalith",
+    "lawn alsharit althaalith",
+    "alhadu al'adnaa limustawaa allawn al'ahmar lilsharit althaalith",
+    "alhadu al'adnaa limustawaa allawn al'akhdar lilsharit althaalith",
+    "alhadu al'adnaa limustawaa allawn al'azraq lilsharit althaalith",
+    "alhadu al'adnaa limustawaa allawn lilsharit althaalith",
+    "alhadu al'aqsaa limustawaa allawn al'ahmar lilsharit althaalith",
+    "alhadu al'aqsaa limustawaa allawn al'akhdar lilsharit althaalith",
+    "alhadu al'aqsaa limustawaa allawn al'azraq lilsharit althaalith",
+    "alhadu al'aqsaa limustawaa allawn lilsharit althaalith",
+    "satakhtar mayzat Progresses alwanan eashwayiyatan 'iidha tama tamkinuha. wa'iila, fastakhdim al'alwan min altakwini.",
+    "'iidha tama tamkin dawrat al'alwan, fakam eadad alealamat qabl taghyir al'alwan fi mayzat Progresses? 1 ealamat = 0.5 ealamat thalithatan"
   ]
 }
