--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/brz.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/brz.json
@@ -4312,6 +4312,109 @@
     "Esquemas de cores do Zorin OS, um spinoff não oficial de um popular sistema operacional Linux, o Ubuntu",
     "Extras - Química",
     "Extras - Mods",
-    "Extras - Ícones"
+    "Extras - Ícones",
+    "Qual cultura está sendo usada para alterar os nomes dos meses, calendário, etc.?",
+    "Habilitar widgets 'The Nitrocid Homepage'",
+    "Habilita os widgets 'The Nitrocid Homepage' no lado direito da tela.",
+    "Habilitar o feed RSS 'The Nitrocid Homepage'",
+    "Habilita o widget de feed RSS 'The Nitrocid Homepage' no lado direito da tela.",
+    "Widget 'The Nitrocid Homepage'",
+    "Seleciona um widget que será exibido em 'The Nitrocid Homepage'.",
+    "Configurações de borda de notificação",
+    "Isso permite que você configure a borda de notificação",
+    "Configurações gerais de borda",
+    "Isso permite que você configure a borda geral",
+    "Configurações de aparência",
+    "Isso permite que você configure a aparência da rampa de horas",
+    "Isso permite que você configure a cor da rampa de horas",
+    "Isso permite que você configure a aparência da rampa de minutos",
+    "Isso permite que você configure a cor da rampa de minutos",
+    "Isso permite que você configure a aparência da rampa de segundos",
+    "Isso permite que você configure a cor da rampa de segundos",
+    "Configurações de cor da posição inicial",
+    "Isso permite que você configure as cores da posição inicial",
+    "Configurações de cor da posição final",
+    "Isso permite que você configure as cores da posição final",
+    "Configurações da barra de rampa",
+    "Isso permite que você configure a barra de rampa",
+    "Isso permite que você configure a aparência da rampa",
+    "Isso permite que você configure as cores da rampa",
+    "Configurações iniciais do gradiente",
+    "Isso permite que você configure as cores do gradiente inicial",
+    "Configurações finais do gradiente",
+    "Isso permite que você configure as cores do gradiente final",
+    "Nível máximo de cor de fundo",
+    "Nível máximo de cor de fundo. O valor mínimo aceito é 0 e o valor máximo aceito é 255.",
+    "Nível máximo de cor da linha",
+    "Nível máximo de cor da linha. O valor mínimo aceito é 0 e o valor máximo aceito é 255.",
+    "Nível máximo de cor do texto",
+    "Nível máximo de cor do texto. O valor mínimo aceito é 0 e o valor máximo aceito é 255.",
+    "Use a cultura do sistema",
+    "Se o protetor de tela usa a cultura definida pelas configurações principais do kernel ou por essas configurações do protetor de tela.",
+    "Isso permite que você configure a primeira aparência da rampa",
+    "Texto informativo para o primeiro",
+    "Escreva como seu texto informativo para a hora atual é exibido. {0} para a hora atual de 24 primeiro.",
+    "Caractere do canto superior esquerdo para a primeira barra",
+    "Caractere do canto superior direito para a primeira barra",
+    "Caractere do canto inferior esquerdo para a primeira barra",
+    "Caractere do canto inferior direito para a primeira barra",
+    "Caractere do quadro superior para a primeira barra",
+    "Caractere do quadro inferior para a primeira barra",
+    "Caractere do quadro esquerdo para a primeira barra",
+    "Caractere do quadro direito para a primeira barra",
+    "Isso permite que você configure a primeira cor da rampa",
+    "Cor da primeira barra",
+    "Nível mínimo de cor vermelha para a primeira",
+    "Nível mínimo de cor verde para a primeira",
+    "Nível mínimo de cor azul para a primeira",
+    "Nível mínimo de cor para a primeira",
+    "Nível máximo de cor vermelha para a primeira",
+    "Nível máximo de cor verde para a primeira",
+    "Nível máximo de cor azul para a primeira",
+    "Nível máximo de cor para a primeira",
+    "Isso permite que você configure a segunda aparência da rampa",
+    "Texto informativo para a segunda",
+    "Escreva como seu texto informativo para o minuto atual é exibido. {0} para o minuto atual de 60 segundos.",
+    "Caractere do canto superior esquerdo para a segunda barra",
+    "Caractere do canto superior direito para a segunda barra",
+    "Caractere do canto inferior esquerdo para a segunda barra",
+    "Caractere do canto inferior direito para a segunda barra",
+    "Caractere do quadro superior para a segunda barra",
+    "Caractere do quadro inferior para a segunda barra",
+    "Caractere do quadro esquerdo para a segunda barra",
+    "Caractere do quadro direito para a segunda barra",
+    "Isso permite que você configure a segunda cor da rampa",
+    "Cor da segunda barra",
+    "Nível mínimo de cor vermelha para a segunda",
+    "Nível mínimo de cor verde para a segunda",
+    "Nível mínimo de cor azul para a segunda",
+    "Nível mínimo de cor para a segunda",
+    "Nível máximo de cor vermelha para a segunda",
+    "Nível máximo de cor verde para a segunda",
+    "Nível máximo de cor azul para a segunda",
+    "Nível máximo de cor para a segunda",
+    "Isso permite que você configure a terceira aparência da rampa",
+    "Caractere do canto superior esquerdo para a terceira barra",
+    "Caractere do canto superior direito para a terceira barra",
+    "Caractere do canto inferior esquerdo para a terceira barra",
+    "Caractere do canto inferior direito para a terceira barra",
+    "Caractere do quadro superior para a terceira barra",
+    "Caractere do quadro inferior para a terceira barra",
+    "Caractere do quadro esquerdo para a terceira barra",
+    "Caractere do quadro direito para a terceira barra",
+    "Texto informativo para o terceiro",
+    "Escreva como seu texto informativo para o segundo atual é exibido. {0} para o segundo atual de 60 terceiros.",
+    "Isso permite que você configure a cor da terceira rampa",
+    "Cor da terceira barra",
+    "Nível mínimo de cor vermelha para o terceiro",
+    "Nível mínimo de cor verde para o terceiro",
+    "Nível mínimo de cor azul para o terceiro",
+    "Nível mínimo de cor para o terceiro",
+    "Nível máximo de cor vermelha para o terceiro",
+    "Nível máximo de cor verde para o terceiro",
+    "Nível máximo de cor azul para o terceiro",
+    "Nível máximo de cor para o terceiro",
+    "O Progresses selecionará cores aleatórias se estiver habilitado. Caso contrário, use cores da configuração.",
+    "Se o ciclo de cores estiver habilitado, quantos tiques antes de alterar as cores no Progresses? 1 tique = 0,5 terço"
   ]
 }
