--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/chi-T.json
@@ -4312,6 +4312,109 @@
     "Zorin OS 的配色方案，Zorin OS 是流行 Linux 操作系统 Ubuntu 的非官方衍生产品",
     "附加内容——化学",
     "附加功能 - 模组",
-    "附加功能——图标"
+    "附加功能——图标",
+    "使用哪种文化来更改月份名称、日历等？",
+    "启用“Nitrocid 主页”小部件",
+    "在屏幕右侧启用“Nitrocid 主页”小部件。",
+    "启用“Nitrocid 主页”RSS 源",
+    "在屏幕右侧启用“Nitrocid 主页”RSS 源小部件。",
+    "“Nitrocid 主页”小部件",
+    "选择将在“Nitrocid 主页”中显示的小部件。",
+    "通知边框设置",
+    "这允许您配置通知边框",
+    "常规边框设置",
+    "这允许您配置常规边框",
+    "外观设置",
+    "这允许您配置小时坡道外观",
+    "这允许您配置小时坡道颜色",
+    "这允许您配置分钟坡道外观",
+    "这允许您配置分钟坡道颜色",
+    "这允许您配置秒坡道外观",
+    "这允许您配置秒坡道颜色",
+    "起始位置颜色设置",
+    "这允许您配置起始位置颜色",
+    "终止位置颜色设置",
+    "这允许您配置终止位置颜色",
+    "坡道条设置",
+    "这允许您配置坡道条",
+    "这允许您配置坡道外观",
+    "这允许您配置坡道颜色",
+    "渐变起始设置",
+    "这允许您配置起始渐变颜色",
+    "渐变结束设置",
+    "这允许您配置结束渐变颜色",
+    "最大背景颜色级别",
+    "最大背景颜色级别。最小接受值为 0，最大接受值为 255。",
+    "最大线条颜色级别",
+    "最大线条颜色级别。最小可接受值为 0，最大可接受值为 255。",
+    "最大文本颜色级别",
+    "最大文本颜色级别。最小可接受值为 0，最大可接受值为 255。",
+    "使用系统文化",
+    "屏幕保护程序是否使用由主内核设置或此屏幕保护程序设置设置的文化。",
+    "这允许您配置第一个坡道外观",
+    "第一个信息文本",
+    "写下当前小时的信息文本的显示方式。当前小时（共 24 小时）的 {0} 第一个。",
+    "第一小节的左上角字符",
+    "第一小节的右上角字符",
+    "第一小节的左下角字符",
+    "第一小节的右下角字符",
+    "第一小节的上框字符",
+    "第一小节的下框字符",
+    "第一小节的左框字符",
+    "第一小节的右框字符",
+    "这允许您配置第一个渐变颜色",
+    "第一小节的颜色",
+    "第一小节的最小红色级别",
+    "第一小节的最小绿色级别",
+    "第一小节的最小蓝色级别",
+    "第一小节的最小颜色级别",
+    "第一小节的最大红色级别",
+    "第一小节的最大绿色级别",
+    "第一小节的最大蓝色级别",
+    "第一小节的最大颜色级别",
+    "这允许您配置第二个渐变外观",
+    "第二小节的信息文本",
+    "写下当前分钟的信息文本的显示方式。当前分钟为 {0}（共 60 秒）。",
+    "第二条的左上角字符",
+    "第二条的右上角字符",
+    "第二条的左下角字符",
+    "第二条的右下角字符",
+    "第二条的上边框字符",
+    "第二条的下边框字符",
+    "第二条的左边框字符",
+    "第二条的右边框字符",
+    "这允许您配置第二个渐变颜色",
+    "第二条的颜色",
+    "第二条的最小红色级别",
+    "第二条的最小绿色级别",
+    "第二条的最小蓝色级别",
+    "第二条的最小颜色级别",
+    "第二条的最大红色级别",
+    "第二条的最大绿色级别",
+    "第二条的最大蓝色级别",
+    "第二条的最大颜色级别",
+    "这允许您配置第三个渐变外观",
+    "第三条的左上角字符",
+    "第三条的右上角字符",
+    "第三条的左下角字符",
+    "第三条的右下角字符",
+    "第三条的上边框字符",
+    "第三条的下边框字符",
+    "第三条的左边框字符",
+    "第三条的右边框字符栏",
+    "第三栏的信息文本",
+    "写下当前第二栏的信息文本如何显示。当前第二栏为 {0}，共 60 个第三栏。",
+    "这允许您配置第三栏渐变颜色",
+    "第三栏的颜色",
+    "第三栏的最小红色级别",
+    "第三栏的最小绿色级别",
+    "第三栏的最小蓝色级别",
+    "第三栏的最小颜色级别",
+    "第三栏的最大红色级别",
+    "第三栏的最大绿色级别",
+    "第三栏的最大蓝色级别",
+    "第三栏的最大颜色级别",
+    "如果启用，进度将选择随机颜色。否则，使用配置中的颜色。",
+    "如果启用了颜色循环，进度中更改颜色前需要多少个刻度？1 刻度 = 0.5 秒"
   ]
 }
