--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt-T.json
@@ -4312,6 +4312,109 @@
     "Zorin OS 的配色方案，Zorin OS 是流行 Linux 作業系統 Ubuntu 的非官方衍生產品",
     "附加內容——化學",
     "附加功能 - 模組",
-    "附加功能——圖標"
+    "附加功能——圖標",
+    "哪一種文化被用來改變月份名稱、日曆等？",
+    "啟用“Nitrocid 主頁”小工具",
+    "在螢幕右側啟用「Nitrocid 主頁」小工具。",
+    "啟用「Nitrocid 首頁」RSS 來源",
+    "在螢幕右側啟用「Nitrocid 主頁」RSS 提要小工具。",
+    "“Nitrocid 主頁”小工具",
+    "選擇將顯示在「Nitrocid 主頁」中的小工具。",
+    "通知邊框設定",
+    "這使你可以配置通知邊框",
+    "常規邊框設置",
+    "這允許您配置一般邊框",
+    "外觀設定",
+    "這使您可以配置小時數斜坡外觀",
+    "這使您可以配置小時數漸層顏色",
+    "這使您可以配置分鐘斜坡外觀",
+    "這使你可以配置分鐘漸層顏色",
+    "這使您可以配置秒斜坡外觀",
+    "這允許您配置秒數漸層顏色",
+    "起始位置顏色設定",
+    "這允許您配置起始位置顏色",
+    "結束位置顏色設定",
+    "這使您可以配置結束位置顏色",
+    "坡道欄設置",
+    "這允許您配置坡道欄",
+    "這允許您配置坡道外觀",
+    "這允許您配置漸層顏色",
+    "梯度開始設定",
+    "這允許您配置開始漸層顏色",
+    "漸變結束設定",
+    "這使你可以配置最終漸層顏色",
+    "最大背景顏色級別",
+    "最大背景色彩等級。可接受的最小值為 0，可接受的最大值為 255。",
+    "最大線條色彩等級",
+    "最大線條色彩等級。可接受的最小值為 0，可接受的最大值為 255。",
+    "最大文字顏色級別",
+    "最大文字顏色等級。可接受的最小值為 0，可接受的最大值為 255。",
+    "使用系統文化",
+    "螢幕保護程式是否使用由主核心設定或此螢幕保護程式設定所設定的文化。",
+    "這允許您配置第一個坡道外觀",
+    "第一個資訊文本",
+    "寫下目前小時的資訊文字如何顯示。目前小時為 {0}（共 24 小時）。",
+    "第一小節的左上角字符",
+    "第一小節的右上角字符",
+    "第一個小節的左下角字符",
+    "第一個小節的右下角字符",
+    "第一小節的上框字符",
+    "第一小節的下框字符",
+    "第一小節的左框架字符",
+    "第一小節的右邊框架字符",
+    "這允許您配置第一個漸層顏色",
+    "第一根柱線的顏色",
+    "第一個最低紅色等級",
+    "第一個最低綠色等級",
+    "第一個最低藍色等級",
+    "第一個最低顏色級別",
+    "第一個最大紅色等級",
+    "第一個綠色最高等級",
+    "第一個最大藍色等級",
+    "第一個最大顏色級別",
+    "這允許您配置第二個坡道外觀",
+    "第二個資訊文本",
+    "寫下當前分鐘的資訊文字如何顯示。當前分鐘為 {0}（共 60 秒）。",
+    "第二小節的左上角字符",
+    "第二小節的右上角字符",
+    "第二小節的左下角字符",
+    "第二小節的右下角字符",
+    "第二條的上框字符",
+    "第二小節的下框字符",
+    "第二小節的左框字符",
+    "第二小節的右邊框架字符",
+    "這允許您配置第二個漸層顏色",
+    "第二條柱的顏色",
+    "第二個的最低紅色等級",
+    "第二個的最低綠色等級",
+    "第二個最低藍色等級",
+    "第二個最低顏色級別",
+    "最大紅色等級為秒",
+    "第二個最大綠色等級",
+    "最大藍色等級",
+    "最大色彩等級",
+    "這允許您配置第三個坡道外觀",
+    "第三欄左上角的字符",
+    "第三欄右上角的字符",
+    "第三小節的左下角字符",
+    "第三欄的右下角字符",
+    "第三小節的上框字符",
+    "第三小節的下框字符",
+    "第三小節的左框字符",
+    "第三小節的右邊框架字符",
+    "第三方資訊文字",
+    "寫下目前秒的訊息文字如何顯示。目前排名第二（共 60 個第三名）的是 {0}。",
+    "這允許您配置第三個漸層顏色",
+    "第三條橫線的顏色",
+    "第三個的最低紅色等級",
+    "第三個綠色等級最低",
+    "第三個最低藍色等級",
+    "第三個最低色彩等級",
+    "第三個最大紅色等級",
+    "第三個綠色顏色等級最高",
+    "第三個藍色最高等級",
+    "第三個最大顏色級別",
+    "如果啟用，進度將選擇隨機顏色。否則，請使用配置中的顏色。",
+    "如果啟用了顏色循環，那麼在進度中需要多少個刻度才能改變顏色？ 1 刻 = 0.5 秒"
   ]
 }
