--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/cnt.json
@@ -4312,6 +4312,109 @@
     "Zorin OS de pèisè fāng'àn,Zorin OS shì liúxíng Linux zuòyè xìtǒng Ubuntu de fēi guānfāng yǎnshēng chǎnpǐn",
     "fùjiā nèiróng——huàxué",
     "fùjiā gōngnéng - mó zǔ",
-    "fùjiā gōngnéng——túbiāo"
+    "fùjiā gōngnéng——túbiāo",
+    "Nǎ yīzhǒng wénhuà bèi yòng lái gǎibiàn yuèfèn míngchēng, rìlì děng?",
+    "Qǐyòng “Nitrocid zhǔyè” xiǎo gōngjù",
+    "zài yíngmù yòucè qǐyòng `Nitrocid zhǔyè'xiǎo gōngjù.",
+    "Qǐyòng `Nitrocid shǒuyè'RSS láiyuán",
+    "zài yíngmù yòucè qǐyòng `Nitrocid zhǔyè'RSS tíyào xiǎo gōngjù.",
+    "“Nitrocid zhǔyè” xiǎo gōngjù",
+    "xuǎnzé jiāng xiǎnshì zài `Nitrocid zhǔyè'zhōng de xiǎo gōngjù.",
+    "Tōngzhī biānkuàng shèdìng",
+    "zhè shǐ nǐ kěyǐ pèizhì tōngzhī biānkuàng",
+    "chángguī biānkuàng shèzhì",
+    "zhè yǔnxǔ nín pèizhì yībān biānkuàng",
+    "wàiguān shèdìng",
+    "zhè shǐ nín kěyǐ pèizhì xiǎoshí shù xiépō wàiguān",
+    "zhè shǐ nín kěyǐ pèizhì xiǎoshí shù jiàn céng yánsè",
+    "zhè shǐ nín kěyǐ pèizhì fēnzhōng xiépō wàiguān",
+    "zhè shǐ nǐ kěyǐ pèizhì fēnzhōng jiàn céng yánsè",
+    "zhè shǐ nín kěyǐ pèizhì miǎo xiépō wàiguān",
+    "zhè yǔnxǔ nín pèizhì miǎo shù jiàn céng yánsè",
+    "qǐ shǐ wèizhì yánsè shèdìng",
+    "zhè yǔnxǔ nín pèizhì qǐ shǐ wèizhì yánsè",
+    "jiéshù wèizhì yánsè shèdìng",
+    "zhè shǐ nín kěyǐ pèizhì jiéshù wèizhì yánsè",
+    "pō dào lán shèzhì",
+    "zhè yǔnxǔ nín pèizhì pō dào lán",
+    "zhè yǔnxǔ nín pèizhì pō dào wàiguān",
+    "zhè yǔnxǔ nín pèizhì jiàn céng yánsè",
+    "tīdù kāishǐ shèdìng",
+    "zhè yǔnxǔ nín pèizhì kāishǐ jiàn céng yánsè",
+    "jiànbiàn jiéshù shèdìng",
+    "zhè shǐ nǐ kěyǐ pèizhì zuìzhōng jiàn céng yánsè",
+    "zuìdà bèijǐng yánsè jíbié",
+    "zuìdà bèijǐng sècǎi děngjí. Kě jiēshòu de zuìxiǎo zhí wèi 0, kě jiēshòu de zuìdà zhí wèi 255.",
+    "Zuìdà xiàntiáo sècǎi děngjí",
+    "zuìdà xiàntiáo sècǎi děngjí. Kě jiēshòu de zuìxiǎo zhí wèi 0, kě jiēshòu de zuìdà zhí wèi 255.",
+    "Zuìdà wénzì yánsè jíbié",
+    "zuìdà wénzì yánsè děngjí. Kě jiēshòu de zuìxiǎo zhí wèi 0, kě jiēshòu de zuìdà zhí wèi 255.",
+    "Shǐyòng xìtǒng wénhuà",
+    "yíngmù bǎohù chéngshì shìfǒu shǐyòng yóu zhǔ héxīn shèdìng huò cǐ yíngmù bǎohù chéngshì shèdìng suǒ shèdìng de wénhuà.",
+    "Zhè yǔnxǔ nín pèizhì dì yī gè pō dào wàiguān",
+    "dì yī gè zīxùn wénběn",
+    "xiě xià mùqián xiǎoshí de zīxùn wénzì rúhé xiǎnshì. Mùqián xiǎoshí wèi {0}(gòng 24 xiǎoshí).",
+    "Dì yī xiǎojié de zuǒshàng jiǎo zìfú",
+    "dì yī xiǎojié de yòushàng jiǎo zìfú",
+    "dì yī gè xiǎojié de zuǒxiàjiǎo zìfú",
+    "dì yī gè xiǎojié de yòu xiàjiǎo zìfú",
+    "dì yī xiǎojié de shàng kuàng zìfú",
+    "dì yī xiǎojié de xià kuàng zìfú",
+    "dì yī xiǎojié de zuǒ kuàngjià zìfú",
+    "dì yī xiǎojié de yòubiān kuàngjià zìfú",
+    "zhè yǔnxǔ nín pèizhì dì yī gè jiàn céng yánsè",
+    "dì yī gēn zhù xiàn de yánsè",
+    "dì yī gè zuìdī hóngsè děngjí",
+    "dì yī gè zuìdī lǜsè děngjí",
+    "dì yī gè zuìdī lán sè děngjí",
+    "dì yī gè zuìdī yánsè jíbié",
+    "dì yī gè zuìdà hóngsè děngjí",
+    "dì yī gè lǜsè zuìgāo děngjí",
+    "dì yī gè zuìdà lán sè děngjí",
+    "dì yī gè zuìdà yánsè jíbié",
+    "zhè yǔnxǔ nín pèizhì dì èr gè pō dào wàiguān",
+    "dì èr gè zīxùn wénběn",
+    "xiě xià dāngqián fēnzhōng de zīxùn wénzì rúhé xiǎnshì. Dāngqián fēnzhōng wèi {0}(gòng 60 miǎo).",
+    "Dì èr xiǎojié de zuǒshàng jiǎo zìfú",
+    "dì èr xiǎojié de yòushàng jiǎo zìfú",
+    "dì èr xiǎojié de zuǒxiàjiǎo zìfú",
+    "dì èr xiǎojié de yòu xià jiǎo zìfú",
+    "dì èr tiáo de shàng kuàng zìfú",
+    "dì èr xiǎojié de xià kuàng zìfú",
+    "dì èr xiǎojié de zuǒ kuàng zìfú",
+    "dì èr xiǎojié de yòubiān kuàngjià zìfú",
+    "zhè yǔnxǔ nín pèizhì dì èr gè jiàn céng yánsè",
+    "dì èr tiáo zhù de yánsè",
+    "dì èr gè de zuìdī hóngsè děngjí",
+    "dì èr gè de zuìdī lǜsè děngjí",
+    "dì èr gè zuìdī lán sè děngjí",
+    "dì èr gè zuìdī yánsè jíbié",
+    "zuìdà hóngsè děngjí wèi miǎo",
+    "dì èr gè zuìdà lǜsè děngjí",
+    "zuìdà lán sè děngjí",
+    "zuìdà sècǎi děngjí",
+    "zhè yǔnxǔ nín pèizhì dì sān gè pō dào wàiguān",
+    "dì sān lán zuǒshàng jiǎo de zìfú",
+    "dì sān lán yòushàng jiǎo de zìfú",
+    "dì sān xiǎojié de zuǒxià jiǎo zìfú",
+    "dì sān lán de yòu xià jiǎo zìfú",
+    "dì sān xiǎojié de shàng kuàng zìfú",
+    "dì sān xiǎojié de xià kuàng zìfú",
+    "dì sān xiǎojié de zuǒ kuàng zìfú",
+    "dì sān xiǎojié de yòubiān kuàngjià zìfú",
+    "dì sānfāng zīxùn wénzì",
+    "xiě xià mùqián miǎo de xùnxí wénzì rúhé xiǎnshì. Mùqián páimíng dì èr (gòng 60 gè dì sān míng) de shì {0}.",
+    "Zhè yǔnxǔ nín pèizhì dì sān gè jiàn céng yánsè",
+    "dì sān tiáo héng xiàn de yánsè",
+    "dì sān gè de zuìdī hóngsè děngjí",
+    "dì sān gè lǜsè děngjí zuìdī",
+    "dì sān gè zuìdī lán sè děngjí",
+    "dì sān gè zuìdī sècǎi děngjí",
+    "dì sān gè zuìdà hóngsè děngjí",
+    "dì sān gè lǜsè yánsè děngjí zuìgāo",
+    "dì sān gè lán sè zuìgāo děngjí",
+    "dì sān gè zuìdà yánsè jí bié",
+    "rúguǒ qǐyòng, jìndù jiāng xuǎnzé suíjī yánsè. Fǒuzé, qǐng shǐyòng pèizhì zhōng de yánsè.",
+    "Rúguǒ qǐyòngle yánsè xúnhuán, nàme zài jìndù zhòng xūyào duōshǎo gè kèdù cáinéng gǎibiàn yánsè? 1 Kè = 0.5 Miǎo"
   ]
 }
