--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ger.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ger.json
@@ -4312,6 +4312,109 @@
     "Farbschemata von Zorin OS, einem inoffiziellen Spinoff des beliebten Linux-Betriebssystems Ubuntu",
     "Extras - Chemie",
     "Extras - Mods",
-    "Extras - Symbole"
+    "Extras - Symbole",
+    "Welche Kultur wird zum Ändern der Monatsnamen, des Kalenders usw. verwendet?",
+    "„The Nitrocid Homepage“-Widgets aktivieren",
+    "Aktiviert „The Nitrocid Homepage“-Widgets auf der rechten Seite des Bildschirms.",
+    "„The Nitrocid Homepage“-RSS-Feed aktivieren",
+    "Aktiviert „The Nitrocid Homepage“-RSS-Feed-Widget auf der rechten Seite des Bildschirms.",
+    "„The Nitrocid Homepage“-Widget",
+    "Wählt ein Widget aus, das auf „The Nitrocid Homepage“ angezeigt wird.",
+    "Einstellungen für Benachrichtigungsrahmen",
+    "Hiermit können Sie den Benachrichtigungsrahmen konfigurieren.",
+    "Allgemeine Rahmeneinstellungen",
+    "Hiermit können Sie den allgemeinen Rahmen konfigurieren.",
+    "Darstellungseinstellungen",
+    "Hiermit können Sie das Erscheinungsbild der Stundenrampe konfigurieren.",
+    "Hiermit können Sie die Farbe der Stundenrampe konfigurieren.",
+    "Hiermit können Sie das Erscheinungsbild der Minutenrampe konfigurieren.",
+    "Hiermit können Sie die Farbe der Minutenrampe konfigurieren.",
+    "Hiermit können Sie das Erscheinungsbild der Sekundenrampe konfigurieren.",
+    "Hiermit können Sie die Farbe der Sekundenrampe konfigurieren.",
+    "Farbeinstellungen für Startposition",
+    "Hiermit können Sie die Farben der Startposition konfigurieren.",
+    "Farbeinstellungen für Endposition",
+    "Hiermit können Sie die Farben der Endposition konfigurieren.",
+    "Rampenleisteneinstellungen",
+    "Hiermit können Sie die Rampenleiste konfigurieren.",
+    "Hiermit können Sie das Erscheinungsbild der Rampe konfigurieren.",
+    "Hiermit können Sie die Rampenfarben konfigurieren.",
+    "Einstellungen für den Farbverlaufsstart",
+    "Hiermit können Sie die Farben des Farbverlaufsstarts konfigurieren.",
+    "Einstellungen für das Farbverlaufsende",
+    "Hiermit können Sie die Farben des Farbverlaufsendes konfigurieren.",
+    "Maximale Hintergrundfarbstufe",
+    "Maximale Hintergrundfarbstufe. Der minimal akzeptierte Wert ist 0 und der maximal akzeptierte Wert ist 255.",
+    "Maximale Linienfarbstufe",
+    "Maximale Linienfarbstufe. Der minimal akzeptierte Wert ist 0 und der maximal akzeptierte Wert ist 255.",
+    "Maximale Textfarbstufe",
+    "Maximale Textfarbstufe. Der minimal akzeptierte Wert ist 0 und der maximal akzeptierte Wert ist 255.",
+    "Systemkultur verwenden",
+    "Gibt an, ob der Bildschirmschoner die Kultur verwendet, die durch die Hauptkerneleinstellungen oder durch diese Bildschirmschonereinstellungen festgelegt wurde.",
+    "Auf diese Weise können Sie das Erscheinungsbild der ersten Rampe konfigurieren.",
+    "Informationstext für die erste",
+    "Schreiben Sie, wie Ihr Informationstext für die aktuelle Stunde angezeigt wird. {0} für die aktuelle Stunde von 24 zuerst.",
+    "Zeichen in der oberen linken Ecke für den ersten Balken",
+    "Zeichen in der oberen rechten Ecke für den ersten Balken",
+    "Zeichen in der unteren linken Ecke für den ersten Balken",
+    "Zeichen in der unteren rechten Ecke für den ersten Balken",
+    "Oberes Rahmenzeichen für den ersten Balken",
+    "Unteres Rahmenzeichen für den ersten Balken",
+    "Linkes Rahmenzeichen für den ersten Balken",
+    "Rechtes Rahmenzeichen für den ersten Balken",
+    "Hiermit können Sie die Farbe der ersten Rampe konfigurieren",
+    "Farbe des ersten Balkens",
+    "Minimale Rot-Farbstufe für den ersten",
+    "Minimale Grün-Farbstufe für den ersten",
+    "Minimale Blau-Farbstufe für den ersten",
+    "Minimale Farbstufe für den ersten",
+    "Maximale Rot-Farbstufe für den ersten",
+    "Maximale Grün-Farbstufe für den ersten",
+    "Maximale Blau-Farbstufe für den ersten",
+    "Maximale Farbstufe für den ersten",
+    "Hiermit können Sie das Erscheinungsbild der zweiten Rampe konfigurieren",
+    "Informationstext für die Sekunde",
+    "Schreiben Sie, wie Ihr Informationstext für die aktuelle Minute angezeigt wird. {0} für die aktuelle Minute von 60 Sekunden.",
+    "Zeichen in der oberen linken Ecke für den zweiten Balken",
+    "Zeichen in der oberen rechten Ecke für den zweiten Balken",
+    "Zeichen in der unteren linken Ecke für den zweiten Balken",
+    "Zeichen in der unteren rechten Ecke für den zweiten Balken",
+    "Zeichen im oberen Rahmen für den zweiten Balken",
+    "Zeichen im unteren Rahmen für den zweiten Balken",
+    "Zeichen im linken Rahmen für den zweiten Balken",
+    "Zeichen im rechten Rahmen für den zweiten Balken",
+    "Hier können Sie die Farbe der zweiten Rampe konfigurieren",
+    "Farbe des zweiten Balkens",
+    "Minimale Rot-Farbstufe für den zweiten",
+    "Minimale Grün-Farbstufe für den zweiten",
+    "Minimale Blau-Farbstufe für den zweiten",
+    "Minimale Farbstufe für den zweiten",
+    "Maximale Rot-Farbstufe für den zweiten",
+    "Maximale Grün-Farbstufe für den zweiten",
+    "Maximale Blau-Farbstufe für den zweiten",
+    "Maximale Farbstufe für den zweiten",
+    "Hier können Sie das Erscheinungsbild der dritten Rampe konfigurieren",
+    "Zeichen in der oberen linken Ecke für den dritten Balken",
+    "Zeichen in der oberen rechten Ecke für den dritten Balken",
+    "Zeichen in der unteren linken Ecke für den dritten Balken",
+    "Zeichen im unteren rechten Eck für den dritten Balken",
+    "Zeichen im oberen Rahmen für den dritten Balken",
+    "Zeichen im unteren Rahmen für den dritten Balken",
+    "Zeichen im linken Rahmen für den dritten Balken",
+    "Zeichen im rechten Rahmen für den dritten Balken",
+    "Informationstext für dritte",
+    "Schreiben Sie, wie Ihr Informationstext für die aktuelle Sekunde angezeigt wird. {0} für aktuelle Sekunde von 60 Dritteln.",
+    "Damit können Sie die Farbe der dritten Rampe konfigurieren",
+    "Farbe des dritten Balkens",
+    "Minimales Rot-Farbniveau für dritte",
+    "Minimales Grün-Farbniveau für dritte",
+    "Minimales Blau-Farbniveau für dritte",
+    "Minimales Farbniveau für dritte",
+    "Maximales Rot-Farbniveau für dritte",
+    "Maximales Grün-Farbniveau für dritte",
+    "Maximales Blau-Farbniveau für dritte",
+    "Maximales Farbniveau für dritte",
+    "Progresses wählt zufällige Farben aus, wenn es aktiviert ist. Andernfalls verwenden Sie Farben aus der Konfiguration.",
+    "Wenn Farbwechsel aktiviert ist, wie viele Ticks vergehen, bevor die Farben in Progresses geändert werden? 1 Tick = 0,5 Drittel"
   ]
 }
