--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/grk.json
@@ -4312,6 +4312,109 @@
     "Χρωματικοί συνδυασμοί από το Zorin OS, ένα ανεπίσημο spinoff ενός δημοφιλούς λειτουργικού συστήματος Linux, του Ubuntu",
     "Extras - Χημεία",
     "Extras - Mods",
-    "Extras - Εικονίδια"
+    "Extras - Εικονίδια",
+    "Ποια κουλτούρα χρησιμοποιείται για την αλλαγή των ονομάτων των μηνών, του ημερολογίου κ.λπ.;",
+    "Ενεργοποιήστε τα γραφικά στοιχεία «The Nitrocid Homepage».",
+    "Ενεργοποιεί τα γραφικά στοιχεία «The Nitrocid Homepage» στη δεξιά πλευρά της οθόνης.",
+    "Ενεργοποιήστε τη ροή RSS \"The Nitrocid Homepage\".",
+    "Ενεργοποιεί το γραφικό στοιχείο τροφοδοσίας RSS «The Nitrocid Homepage» στη δεξιά πλευρά της οθόνης.",
+    "Γραφικό στοιχείο \"Η αρχική σελίδα του Nitrocid\".",
+    "Επιλέγει ένα γραφικό στοιχείο που θα εμφανίζεται στην \"Η αρχική σελίδα του Nitrocid\".",
+    "Ρυθμίσεις περιγράμματος ειδοποιήσεων",
+    "Αυτό σας επιτρέπει να διαμορφώσετε το περίγραμμα ειδοποιήσεων",
+    "Γενικές ρυθμίσεις περιγράμματος",
+    "Αυτό σας επιτρέπει να διαμορφώσετε το γενικό περίγραμμα",
+    "Ρυθμίσεις εμφάνισης",
+    "Αυτό σας επιτρέπει να διαμορφώσετε την εμφάνιση της ράμπας ωρών",
+    "Αυτό σας επιτρέπει να διαμορφώσετε το χρώμα ράμπας ωρών",
+    "Αυτό σας επιτρέπει να διαμορφώσετε την εμφάνιση της ράμπας λεπτών",
+    "Αυτό σας επιτρέπει να διαμορφώσετε το χρώμα της ράμπας λεπτών",
+    "Αυτό σας επιτρέπει να διαμορφώσετε την εμφάνιση ράμπας δευτερολέπτων",
+    "Αυτό σας επιτρέπει να διαμορφώσετε το χρώμα ράμπας δευτερολέπτων",
+    "Ρυθμίσεις χρώματος θέσης έναρξης",
+    "Αυτό σας επιτρέπει να διαμορφώσετε τα χρώματα της θέσης έναρξης",
+    "Ρυθμίσεις χρώματος τελικής θέσης",
+    "Αυτό σας επιτρέπει να διαμορφώσετε τα χρώματα τελικής θέσης",
+    "Ρυθμίσεις ράμπας ράμπας",
+    "Αυτό σας επιτρέπει να διαμορφώσετε τη γραμμή ράμπας",
+    "Αυτό σας επιτρέπει να διαμορφώσετε την εμφάνιση της ράμπας",
+    "Αυτό σας επιτρέπει να διαμορφώσετε τα χρώματα της ράμπας",
+    "Ρυθμίσεις εκκίνησης με κλίση",
+    "Αυτό σας επιτρέπει να διαμορφώσετε τα χρώματα ντεγκραντέ έναρξης",
+    "Ρυθμίσεις τέλους κλίσης",
+    "Αυτό σας επιτρέπει να διαμορφώσετε τα χρώματα τελικής κλίσης",
+    "Μέγιστο επίπεδο χρώματος φόντου",
+    "Μέγιστο επίπεδο χρώματος φόντου. Η ελάχιστη αποδεκτή τιμή είναι 0 και η μέγιστη αποδεκτή τιμή είναι 255.",
+    "Μέγιστο επίπεδο χρώματος γραμμής",
+    "Μέγιστο επίπεδο χρώματος γραμμής. Η ελάχιστη αποδεκτή τιμή είναι 0 και η μέγιστη αποδεκτή τιμή είναι 255.",
+    "Μέγιστο επίπεδο χρώματος κειμένου",
+    "Μέγιστο επίπεδο χρώματος κειμένου. Η ελάχιστη αποδεκτή τιμή είναι 0 και η μέγιστη αποδεκτή τιμή είναι 255.",
+    "Χρησιμοποιήστε την κουλτούρα του συστήματος",
+    "Είτε η προφύλαξη οθόνης χρησιμοποιεί την κουλτούρα που έχει οριστεί από τις κύριες ρυθμίσεις του πυρήνα είτε από αυτές τις ρυθμίσεις προφύλαξης οθόνης.",
+    "Αυτό σας επιτρέπει να διαμορφώσετε την πρώτη εμφάνιση ράμπας",
+    "Πληροφοριακό κείμενο για πρώτο",
+    "Γράψτε πώς εμφανίζεται το κείμενο πληροφοριών για την τρέχουσα ώρα. {0} για την τρέχουσα ώρα από 24 πρώτα.",
+    "Χαρακτήρας επάνω αριστερής γωνίας για την πρώτη γραμμή",
+    "Χαρακτήρας πάνω δεξιά γωνία για την πρώτη γραμμή",
+    "Χαρακτήρας κάτω αριστερής γωνίας για την πρώτη γραμμή",
+    "Χαρακτήρας κάτω δεξιά γωνία για την πρώτη γραμμή",
+    "Χαρακτήρας άνω πλαισίου για την πρώτη γραμμή",
+    "Χαρακτήρας κάτω πλαισίου για την πρώτη γραμμή",
+    "Χαρακτήρας αριστερού πλαισίου για την πρώτη γραμμή",
+    "Χαρακτήρας δεξιού πλαισίου για την πρώτη γραμμή",
+    "Αυτό σας επιτρέπει να διαμορφώσετε το πρώτο χρώμα ράμπας",
+    "Χρώμα πρώτης ράβδου",
+    "Ελάχιστο επίπεδο κόκκινου χρώματος για πρώτο",
+    "Ελάχιστο επίπεδο πράσινου χρώματος για πρώτη φορά",
+    "Ελάχιστο επίπεδο μπλε χρώματος για πρώτη φορά",
+    "Ελάχιστο επίπεδο χρώματος για το πρώτο",
+    "Μέγιστο επίπεδο κόκκινου χρώματος για το πρώτο",
+    "Μέγιστο επίπεδο πράσινου χρώματος για το πρώτο",
+    "Μέγιστο επίπεδο μπλε χρώματος για το πρώτο",
+    "Μέγιστο επίπεδο χρώματος για το πρώτο",
+    "Αυτό σας επιτρέπει να διαμορφώσετε τη δεύτερη εμφάνιση ράμπας",
+    "Ενημερωτικό κείμενο για δεύτερο",
+    "Γράψτε πώς εμφανίζεται το κείμενο πληροφοριών για το τρέχον λεπτό. {0} για το τρέχον λεπτό από τα 60 δευτερόλεπτα.",
+    "Χαρακτήρας πάνω αριστερή γωνία για τη δεύτερη γραμμή",
+    "Χαρακτήρας πάνω δεξιά γωνία για τη δεύτερη γραμμή",
+    "Χαρακτήρας κάτω αριστερής γωνίας για τη δεύτερη γραμμή",
+    "Χαρακτήρας κάτω δεξιά γωνία για τη δεύτερη γραμμή",
+    "Χαρακτήρας άνω πλαισίου για τη δεύτερη μπάρα",
+    "Κάτω χαρακτήρας καρέ για τη δεύτερη μπάρα",
+    "Χαρακτήρας αριστερού πλαισίου για τη δεύτερη γραμμή",
+    "Χαρακτήρας δεξιού πλαισίου για τη δεύτερη γραμμή",
+    "Αυτό σας επιτρέπει να διαμορφώσετε το δεύτερο χρώμα ράμπας",
+    "Χρώμα δεύτερης ράβδου",
+    "Ελάχιστο επίπεδο κόκκινου χρώματος για το δεύτερο",
+    "Ελάχιστο επίπεδο πράσινου χρώματος για δεύτερο",
+    "Ελάχιστο επίπεδο μπλε χρώματος για δευτερόλεπτο",
+    "Ελάχιστο επίπεδο χρώματος για δευτερόλεπτο",
+    "Μέγιστο επίπεδο κόκκινου χρώματος για δευτερόλεπτο",
+    "Μέγιστο επίπεδο πράσινου χρώματος για δευτερόλεπτο",
+    "Μέγιστο επίπεδο μπλε χρώματος για δευτερόλεπτο",
+    "Μέγιστο επίπεδο χρώματος για δευτερόλεπτο",
+    "Αυτό σας επιτρέπει να διαμορφώσετε την τρίτη εμφάνιση ράμπας",
+    "Χαρακτήρας επάνω αριστερής γωνίας για την τρίτη γραμμή",
+    "Χαρακτήρας πάνω δεξιά γωνία για την τρίτη γραμμή",
+    "Χαρακτήρας κάτω αριστερής γωνίας για την τρίτη γραμμή",
+    "Χαρακτήρας κάτω δεξιά γωνία για την τρίτη γραμμή",
+    "Χαρακτήρας άνω πλαισίου για την τρίτη μπάρα",
+    "Κάτω χαρακτήρας καρέ για την τρίτη μπάρα",
+    "Χαρακτήρας αριστερού πλαισίου για την τρίτη γραμμή",
+    "Χαρακτήρας δεξιού πλαισίου για την τρίτη γραμμή",
+    "Ενημερωτικό κείμενο για το τρίτο",
+    "Γράψτε πώς εμφανίζεται το κείμενο πληροφοριών για το τρέχον δεύτερο. {0} για το τρέχον δεύτερο από τα 60 τρίτα.",
+    "Αυτό σας επιτρέπει να διαμορφώσετε το τρίτο χρώμα ράμπας",
+    "Χρώμα τρίτης ράβδου",
+    "Ελάχιστο επίπεδο κόκκινου χρώματος για το τρίτο",
+    "Ελάχιστο επίπεδο πράσινου χρώματος για το τρίτο",
+    "Ελάχιστο επίπεδο μπλε χρώματος για το τρίτο",
+    "Ελάχιστο επίπεδο χρώματος για το τρίτο",
+    "Μέγιστο επίπεδο κόκκινου χρώματος για το τρίτο",
+    "Μέγιστο επίπεδο πράσινου χρώματος για το τρίτο",
+    "Μέγιστο επίπεδο μπλε χρώματος για το τρίτο",
+    "Μέγιστο επίπεδο χρώματος για το τρίτο",
+    "Το Progresses θα επιλέξει τυχαία χρώματα εάν είναι ενεργοποιημένο. Διαφορετικά, χρησιμοποιήστε χρώματα από τη διαμόρφωση.",
+    "Εάν είναι ενεργοποιημένος ο κύκλος χρωμάτων, πόσα σημάδια προτού αλλάξετε χρώματα στο Progresses; 1 τικ = 0,5 τρίτο"
   ]
 }
