--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind-T.json
@@ -4312,6 +4312,109 @@
     "ज़ोरिन ओएस से रंग योजनाएं, एक लोकप्रिय लिनक्स ऑपरेटिंग सिस्टम, उबंटू का एक अनौपचारिक स्पिनऑफ",
     "अतिरिक्त - रसायन विज्ञान",
     "अतिरिक्त - मॉड्स",
-    "अतिरिक्त - चिह्न"
+    "अतिरिक्त - चिह्न",
+    "महीनों के नाम, कैलेंडर इत्यादि बदलने के लिए किस संस्कृति का उपयोग किया जा रहा है?",
+    "'द नाइट्रोसिड होमपेज' विजेट सक्षम करें",
+    "'द नाइट्रोसिड होमपेज' विजेट स्क्रीन के दाईं ओर सक्षम करता है।",
+    "'द नाइट्रोसिड होमपेज' RSS फ़ीड सक्षम करें",
+    "'द नाइट्रोसिड होमपेज' RSS फ़ीड विजेट स्क्रीन के दाईं ओर सक्षम करता है।",
+    "'द नाइट्रोसिड होमपेज' विजेट",
+    "'द नाइट्रोसिड होमपेज' में प्रदर्शित होने वाले विजेट का चयन करता है।",
+    "अधिसूचना बॉर्डर सेटिंग",
+    "यह आपको अधिसूचना बॉर्डर कॉन्फ़िगर करने की अनुमति देता है",
+    "सामान्य बॉर्डर सेटिंग",
+    "यह आपको सामान्य बॉर्डर कॉन्फ़िगर करने की अनुमति देता है",
+    "उपस्थिति सेटिंग",
+    "यह आपको घंटे रैंप उपस्थिति कॉन्फ़िगर करने की अनुमति देता है",
+    "यह आपको घंटे रैंप रंग कॉन्फ़िगर करने की अनुमति देता है",
+    "यह आपको मिनट रैंप उपस्थिति कॉन्फ़िगर करने की अनुमति देता है",
+    "यह आपको मिनट रैंप रंग कॉन्फ़िगर करने की अनुमति देता है",
+    "यह आपको सेकंड रैंप उपस्थिति कॉन्फ़िगर करने की अनुमति देता है",
+    "यह आपको सेकंड रैंप रंग कॉन्फ़िगर करने की अनुमति देता है",
+    "प्रारंभ स्थिति रंग सेटिंग",
+    "यह आपको प्रारंभ स्थिति रंग कॉन्फ़िगर करने की अनुमति देता है",
+    "अंत स्थिति रंग सेटिंग",
+    "यह आपको अंत स्थिति रंग कॉन्फ़िगर करने की अनुमति देता है",
+    "रैंप बार सेटिंग",
+    "यह आपको रैंप बार कॉन्फ़िगर करने की अनुमति देता है",
+    "यह आपको रैंप उपस्थिति कॉन्फ़िगर करने की अनुमति देता है",
+    "यह आपको रैंप रंगों को कॉन्फ़िगर करने की अनुमति देता है",
+    "ग्रेडिएंट प्रारंभ सेटिंग",
+    "यह आपको प्रारंभ ग्रेडिएंट रंगों को कॉन्फ़िगर करने की अनुमति देता है",
+    "ग्रेडिएंट अंत सेटिंग",
+    "यह आपको अंत ग्रेडिएंट रंगों को कॉन्फ़िगर करने की अनुमति देता है",
+    "अधिकतम पृष्ठभूमि रंग स्तर",
+    "अधिकतम पृष्ठभूमि रंग स्तर। न्यूनतम स्वीकृत मान 0 है और अधिकतम स्वीकृत मान 255 है।",
+    "अधिकतम रेखा रंग स्तर",
+    "अधिकतम रेखा रंग स्तर। न्यूनतम स्वीकृत मान 0 है और अधिकतम स्वीकृत मान 255 है।",
+    "अधिकतम टेक्स्ट रंग स्तर",
+    "अधिकतम टेक्स्ट रंग स्तर। न्यूनतम स्वीकृत मान 0 है और अधिकतम स्वीकृत मान 255 है।",
+    "सिस्टम संस्कृति का उपयोग करें",
+    "क्या स्क्रीनसेवर मुख्य कर्नेल सेटिंग्स या इस स्क्रीनसेवर सेटिंग्स द्वारा निर्धारित संस्कृति का उपयोग करता है।",
+    "यह आपको पहले रैंप उपस्थिति को कॉन्फ़िगर करने की अनुमति देता है",
+    "पहले के लिए सूचना पाठ",
+    "लिखें कि वर्तमान घंटे के लिए आपका सूचना पाठ कैसे दिखाई देता है। 24 में से वर्तमान घंटे के लिए {0} पहले।",
+    "पहले बार के लिए ऊपरी बाएँ कोने का वर्ण",
+    "पहले बार के लिए ऊपरी दाएँ कोने का वर्ण",
+    "पहले बार के लिए निचले बाएँ कोने का वर्ण",
+    "पहले बार के लिए निचले दाएँ कोने का वर्ण",
+    "पहले बार के लिए ऊपरी फ़्रेम वर्ण",
+    "पहले बार के लिए निचले फ़्रेम वर्ण",
+    "पहले बार के लिए बाएँ फ़्रेम वर्ण",
+    "पहले बार के लिए दाएँ फ़्रेम वर्ण",
+    "इससे आप पहले रैंप का रंग कॉन्फ़िगर कर सकते हैं",
+    "पहले बार का रंग",
+    "पहले के लिए न्यूनतम लाल रंग का स्तर",
+    "पहले के लिए न्यूनतम हरा रंग का स्तर",
+    "पहले के लिए न्यूनतम नीला रंग का स्तर",
+    "पहले के लिए न्यूनतम रंग का स्तर",
+    "पहले के लिए अधिकतम लाल रंग का स्तर",
+    "पहले के लिए अधिकतम हरा रंग का स्तर",
+    "पहले के लिए अधिकतम नीला रंग का स्तर",
+    "पहले के लिए अधिकतम रंग का स्तर",
+    "इससे आप दूसरे रैंप की उपस्थिति कॉन्फ़िगर कर सकते हैं",
+    "दूसरे के लिए सूचना पाठ",
+    "लिखें कि वर्तमान मिनट के लिए आपका सूचना पाठ कैसे दिखाई देता है। 60 सेकंड में से वर्तमान मिनट के लिए {0}।",
+    "दूसरे बार के लिए ऊपरी बाएँ कोने का वर्ण",
+    "दूसरे बार के लिए ऊपरी दाएँ कोने का वर्ण",
+    "दूसरे बार के लिए निचले बाएँ कोने का वर्ण",
+    "दूसरे बार के लिए निचले दाएँ कोने का वर्ण",
+    "दूसरे बार के लिए ऊपरी फ़्रेम वर्ण",
+    "दूसरे बार के लिए निचले फ़्रेम वर्ण",
+    "दूसरे बार के लिए बाएँ फ़्रेम वर्ण",
+    "दूसरे बार के लिए दाएँ फ़्रेम वर्ण",
+    "इससे आप दूसरे रैंप के रंग को कॉन्फ़िगर कर सकते हैं",
+    "दूसरे बार का रंग",
+    "दूसरे बार के लिए न्यूनतम लाल रंग का स्तर",
+    "दूसरे बार के लिए न्यूनतम हरा रंग का स्तर",
+    "दूसरे बार के लिए न्यूनतम नीला रंग का स्तर",
+    "दूसरे बार के लिए न्यूनतम रंग का स्तर",
+    "दूसरे बार के लिए अधिकतम लाल रंग का स्तर",
+    "दूसरे बार के लिए अधिकतम हरा रंग का स्तर",
+    "दूसरे बार के लिए अधिकतम नीला रंग का स्तर",
+    "दूसरे बार के लिए अधिकतम रंग का स्तर",
+    "इससे आप तीसरे रैंप के स्वरूप को कॉन्फ़िगर कर सकते हैं",
+    "तीसरे बार के लिए ऊपरी बाएँ कोने का वर्ण",
+    "तीसरे बार के लिए ऊपरी दाएँ कोने का वर्ण",
+    "तीसरे बार के लिए निचले बाएँ कोने का वर्ण",
+    "तीसरे बार के लिए निचले दाएँ कोने का वर्ण",
+    "तीसरे बार के लिए ऊपरी फ़्रेम वर्ण",
+    "तीसरे बार के लिए निचले फ़्रेम वर्ण",
+    "तीसरे बार के लिए बाएँ फ़्रेम वर्ण तीसरी पट्टी",
+    "तीसरी पट्टी के लिए दायाँ फ्रेम वर्ण",
+    "तीसरी पट्टी के लिए सूचना पाठ",
+    "लिखें कि वर्तमान सेकंड के लिए आपका सूचना पाठ किस प्रकार प्रदर्शित होता है। 60 तीसरी में से वर्तमान सेकंड के लिए {0}।",
+    "यह आपको तीसरी रैंप का रंग कॉन्फ़िगर करने की अनुमति देता है",
+    "तीसरी पट्टी का रंग",
+    "तीसरी पट्टी के लिए न्यूनतम लाल रंग स्तर",
+    "तीसरी पट्टी के लिए न्यूनतम हरा रंग स्तर",
+    "तीसरी पट्टी के लिए न्यूनतम नीला रंग स्तर",
+    "तीसरी पट्टी के लिए न्यूनतम रंग स्तर",
+    "तीसरी पट्टी के लिए अधिकतम लाल रंग स्तर",
+    "तीसरी पट्टी के लिए अधिकतम हरा रंग स्तर",
+    "तीसरी पट्टी के लिए अधिकतम नीला रंग स्तर",
+    "तीसरी पट्टी के लिए अधिकतम रंग स्तर",
+    "यदि यह सक्षम है तो प्रगति यादृच्छिक रंगों का चयन करेगी। अन्यथा, कॉन्फ़िगरेशन से रंगों का उपयोग करें।",
+    "यदि रंग साइकलिंग सक्षम है, तो प्रगति में रंग बदलने से पहले कितने टिक हैं? 1 टिक = 0.5 तीसरी"
   ]
 }
