--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ind.json
@@ -4312,6 +4312,109 @@
     "zorin oes se rang yojanaen, ek lokapriy linaks opareting sistam ka ek anaupachaarik spinof, ubuntu",
     "atirikt - rasaayan vigyaan",
     "atirikt - mod",
-    "atirikt - chihn"
+    "atirikt - chihn",
+    "maheenon ke naam, kailendar ityaadi badalane ke lie kis sanskrti ka upayog kiya ja raha hai?",
+    "da naitrosid homapej vijet saksham karen",
+    "da naitrosid homapej vijet skreen ke daeen or saksham karata hai.",
+    "da naitrosid homapej rss feed saksham karen",
+    "da naitrosid homapej rss feed vijet skreen ke daeen or saksham karata hai.",
+    "da naitrosid homapej vijet",
+    "da naitrosid homapej mein pradarshit hone vaale vijet ka chayan karata hai.",
+    "adhisoochana bordar seting",
+    "yah aapako adhisoochana bordar konfigar karane kee anumati deta hai",
+    "saamaany bordar seting",
+    "yah aapako saamaany bordar konfigar karane kee anumati deta hai",
+    "upasthiti seting",
+    "yah aapako ghante raimp upasthiti konfigar karane kee anumati deta hai",
+    "yah aapako ghante raimp rang konfigar karane kee anumati deta hai",
+    "yah aapako minat raimp upasthiti konfigar karane kee anumati deta hai",
+    "yah aapako minat raimp rang konfigar karane kee anumati deta hai",
+    "yah aapako sekand raimp upasthiti konfigar karane kee anumati deta hai",
+    "yah aapako sekand raimp rang konfigar karane kee anumati deta hai",
+    "praarambh sthiti rang seting",
+    "yah aapako praarambh sthiti rang konfigar karane kee anumati deta hai",
+    "ant sthiti rang seting",
+    "yah aapako ant sthiti rang konfigar karane kee anumati deta hai",
+    "raimp baar seting",
+    "yah aapako raimp baar konfigar karane kee anumati deta hai",
+    "yah aapako raimp upasthiti konfigar karane kee anumati deta hai",
+    "yah aapako raimp rangon ko konfigar karane kee anumati deta hai",
+    "gredient praarambh seting",
+    "yah aapako praarambh gredient rangon ko konfigar karane kee anumati deta hai",
+    "gredient ant seting",
+    "yah aapako ant gredient rangon ko konfigar karane kee anumati deta hai",
+    "adhikatam prshthabhoomi rang star",
+    "adhikatam prshthabhoomi rang star. nyoonatam sveekrt maan 0 hai aur adhikatam sveekrt maan 255 hai.",
+    "adhikatam rekha rang star",
+    "adhikatam rekha rang star. nyoonatam sveekrt maan 0 hai aur adhikatam sveekrt maan 255 hai.",
+    "adhikatam tekst rang star",
+    "adhikatam tekst rang star. nyoonatam sveekrt maan 0 hai aur adhikatam sveekrt maan 255 hai.",
+    "sistam sanskrti ka upayog karen",
+    "kya skreenasevar mukhy karnel setings ya is skreenasevar setings dvaara nirdhaarit sanskrti ka upayog karata hai.",
+    "yah aapako pahale raimp upasthiti ko konfigar karane kee anumati deta hai",
+    "pahale ke lie soochana paath",
+    "likhen ki vartamaan ghante ke lie aapaka soochana paath kaise dikhaee deta hai. 24 mein se vartamaan ghante ke lie {0} pahale.",
+    "pahale baar ke lie ooparee baen kone ka varn",
+    "pahale baar ke lie ooparee daen kone ka varn",
+    "pahale baar ke lie nichale baen kone ka varn",
+    "pahale baar ke lie nichale daen kone ka varn",
+    "pahale baar ke lie ooparee frem varn",
+    "pahale baar ke lie nichale frem varn",
+    "pahale baar ke lie baen frem varn",
+    "pahale baar ke lie daen frem varn",
+    "isase aap pahale raimp ka rang konfigar kar sakate hain",
+    "pahale baar ka rang",
+    "pahale ke lie nyoonatam laal rang ka star",
+    "pahale ke lie nyoonatam hara rang ka star",
+    "pahale ke lie nyoonatam neela rang ka star",
+    "pahale ke lie nyoonatam rang ka star",
+    "pahale ke lie adhikatam laal rang ka star",
+    "pahale ke lie adhikatam hara rang ka star",
+    "pahale ke lie adhikatam neela rang ka star",
+    "pahale ke lie adhikatam rang ka star",
+    "isase aap doosare raimp kee upasthiti konfigar kar sakate hain",
+    "doosare ke lie soochana paath",
+    "likhen ki vartamaan minat ke lie aapaka soochana paath kaise dikhaee deta hai. 60 sekand mein se vartamaan minat ke lie {0}.",
+    "doosare baar ke lie ooparee baen kone ka varn",
+    "doosare baar ke lie ooparee daen kone ka varn",
+    "doosare baar ke lie nichale baen kone ka varn",
+    "doosare baar ke lie nichale daen kone ka varn",
+    "doosare baar ke lie ooparee frem varn",
+    "doosare baar ke lie nichale frem varn",
+    "doosare baar ke lie baen frem varn",
+    "doosare baar ke lie daen frem varn",
+    "isase aap doosare raimp ke rang ko konfigar kar sakate hain",
+    "doosare baar ka rang",
+    "doosare baar ke lie nyoonatam laal rang ka star",
+    "doosare baar ke lie nyoonatam hara rang ka star",
+    "doosare baar ke lie nyoonatam neela rang ka star",
+    "doosare baar ke lie nyoonatam rang ka star",
+    "doosare baar ke lie adhikatam laal rang ka star",
+    "doosare baar ke lie adhikatam hara rang ka star",
+    "doosare baar ke lie adhikatam neela rang ka star",
+    "doosare baar ke lie adhikatam rang ka star",
+    "isase aap teesare raimp ke svaroop ko konfigar kar sakate hain",
+    "teesare baar ke lie ooparee baen kone ka varn",
+    "teesare baar ke lie ooparee daen kone ka varn",
+    "teesare baar ke lie nichale baen kone ka varn",
+    "teesare baar ke lie nichale daen kone ka varn",
+    "teesare baar ke lie ooparee frem varn",
+    "teesare baar ke lie nichale frem varn",
+    "teesare baar ke lie baen frem varn teesaree pattee",
+    "teesaree pattee ke lie daayaan phrem varn",
+    "teesaree pattee ke lie soochana paath",
+    "likhen ki vartamaan sekand ke lie aapaka soochana paath kis prakaar pradarshit hota hai. 60 teesaree mein se vartamaan sekand ke lie {0}.",
+    "yah aapako teesaree raimp ka rang konfigar karane kee anumati deta hai",
+    "teesaree pattee ka rang",
+    "teesaree pattee ke lie nyoonatam laal rang star",
+    "teesaree pattee ke lie nyoonatam hara rang star",
+    "teesaree pattee ke lie nyoonatam neela rang star",
+    "teesaree pattee ke lie nyoonatam rang star",
+    "teesaree pattee ke lie adhikatam laal rang star",
+    "teesaree pattee ke lie adhikatam hara rang star",
+    "teesaree pattee ke lie adhikatam neela rang star",
+    "teesaree pattee ke lie adhikatam rang star",
+    "yadi yah saksham hai to pragati yaadrchchhik rangon ka chayan karegee. anyatha, konfigareshan se rangon ka upayog karen.",
+    "yadi rang saikaling saksham hai, to pragati mein rang badalane se pahale kitane tik hain? 1 tik = 0.5 teesaree"
   ]
 }
