--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/iri.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/iri.json
@@ -4312,6 +4312,109 @@
     "Scéimeanna datha ó Zorin OS, toradh neamhoifigiúil de chóras oibriúcháin Linux coitianta, Ubuntu",
     "Extras - Ceimic",
     "Extras - Mods",
-    "Extras - Deilbhíní"
+    "Extras - Deilbhíní",
+    "Cén cultúr atá á úsáid chun ainmneacha na míosa, an fhéilire, srl. a athrú?",
+    "Cumasaigh giuirléidí 'The Nitrocid Homepage'",
+    "Cumasaíonn sé giuirléidí 'The Nitrocid Homepage' ar thaobh na láimhe deise den scáileán.",
+    "Cumasaigh fotha RSS 'The Nitrocid Homepage'",
+    "Cumasaíonn sé giuirléid fotha RSS 'The Nitrocid Homepage' ar thaobh na láimhe deise den scáileán.",
+    "Giuirléid 'An Leathanach Baile Nitrocid'",
+    "Roghnaíonn sé giuirléid a thaispeánfar ar 'The Nitrocid Homepage'.",
+    "Socruithe teorann fógra",
+    "Ligeann sé seo duit teorainn an fhógra a chumrú",
+    "Socruithe teorann ginearálta",
+    "Ligeann sé seo duit an teorainn ghinearálta a chumrú",
+    "Socruithe cuma",
+    "Ligeann sé seo duit cuma an rampa uaireanta a chumrú",
+    "Ligeann sé seo duit dath an rampa uaireanta a chumrú",
+    "Ligeann sé seo duit cuma an rampa nóiméad a chumrú",
+    "Ligeann sé seo duit dath an rampa miontuairiscí a chumrú",
+    "Ligeann sé seo duit cuma rampaí soicind a chumrú",
+    "Ligeann sé seo duit dath an rampa soicind a chumrú",
+    "Tosaigh suímh datha suímh",
+    "Ligeann sé seo duit na dathanna tosaigh a chumrú",
+    "Socruithe datha suíomh deiridh",
+    "Ligeann sé seo duit dathanna an tsuímh deiridh a chumrú",
+    "Socruithe barra rampa",
+    "Ligeann sé seo duit an barra rampa a chumrú",
+    "Ligeann sé seo duit cuma an rampa a chumrú",
+    "Ligeann sé seo duit dathanna an rampa a chumrú",
+    "Socruithe tosaithe grádáin",
+    "Ligeann sé seo duit na dathanna grádán tosaigh a chumrú",
+    "Socruithe deireadh grádáin",
+    "Ligeann sé seo duit na dathanna grádáin deiridh a chumrú",
+    "Uasleibhéal dath cúlra",
+    "Uasleibhéal dath cúlra. Is é 0 an luach íosta a nglactar leis agus is é 255 an t-uasluach a nglactar leis.",
+    "Uasleibhéal dath líne",
+    "Uasleibhéal dath líne. Is é 0 an luach íosta a nglactar leis agus is é 255 an t-uasluach a nglactar leis.",
+    "Uasleibhéal datha téacs",
+    "Uasleibhéal datha téacs. Is é 0 an luach íosta a nglactar leis agus is é 255 an t-uasluach a nglactar leis.",
+    "Bain úsáid as cultúr an chórais",
+    "Cibé an n-úsáideann an spárálaíscáileáin an cultúr atá socraithe ag na príomhshocruithe eithne nó ag na socruithe spárálaíscáileáin seo.",
+    "Ligeann sé seo duit an chéad chuma rampa a chumrú",
+    "Téacs faisnéise don chéad uair",
+    "Scríobh conas a léiríonn do théacs faisnéise don uair reatha. {0} don uair reatha as 24 ar dtús.",
+    "Carachtar chúinne uachtarach ar chlé don chéad bharra",
+    "Carachtar cúinne uachtarach ar dheis don chéad bharra",
+    "Carachtar cúinne íochtair ar chlé don chéad bharra",
+    "Carachtar cúinne íochtair ar dheis don chéad bharra",
+    "Carachtar fráma uachtair don chéad bharra",
+    "Carachtar fráma níos ísle don chéad bharra",
+    "Fág carachtar fráma don chéad bharra",
+    "Carachtar fráma ceart don chéad bharra",
+    "Ligeann sé seo duit an chéad dath rampa a chumrú",
+    "Dath an Chéad Bharra",
+    "Íosleibhéal dath dearg ar dtús",
+    "Íosleibhéal dath glas ar dtús",
+    "Íosleibhéal dath gorm ar dtús",
+    "Leibhéal dath íosta don chéad uair",
+    "Uasleibhéal dath dearg ar dtús",
+    "Uasleibhéal dath glas ar dtús",
+    "Uasleibhéal dath gorm ar dtús",
+    "Leibhéal dath uasta don chéad uair",
+    "Ligeann sé seo duit cuma an dara rampa a chumrú",
+    "Téacs faisnéise don soicind",
+    "Scríobh conas a léiríonn do théacs faisnéise don nóiméad reatha. {0} don nóiméad reatha as 60 soicind.",
+    "Carachtar cúinne uachtarach ar chlé don dara barra",
+    "Carachtar cúinne uachtarach ar dheis don dara barra",
+    "Carachtar cúinne íochtair ar chlé don dara barra",
+    "Carachtar cúinne íochtair ar dheis don dara barra",
+    "Carachtar fráma uachtair don dara barra",
+    "Níos ísle carachtar fráma don dara barra",
+    "Fág an carachtar fráma don dara barra",
+    "Carachtar fráma ceart don dara barra",
+    "Ligeann sé seo duit an dara dath rampa a chumrú",
+    "Dath an Dara Bharra",
+    "Íosleibhéal dath dearg don soicind",
+    "Íosleibhéal dath glas don soicind",
+    "Íosleibhéal dath gorm don soicind",
+    "Leibhéal dath íosta don soicind",
+    "Uasleibhéal dath dearg don soicind",
+    "Uasleibhéal dath glas don dara",
+    "Uasleibhéal dath gorm don soicind",
+    "Uasleibhéal datha don soicind",
+    "Ligeann sé seo duit cuma an tríú rampa a chumrú",
+    "Carachtar cúinne uachtarach ar chlé don tríú barra",
+    "Carachtar cúinne uachtarach ar dheis don tríú barra",
+    "Carachtar cúinne íochtair ar chlé don tríú barra",
+    "Carachtar cúinne íochtair ar dheis don tríú barra",
+    "Carachtar fráma uachtair don tríú barra",
+    "Carachtar fráma níos ísle don tríú barra",
+    "D’fhág carachtar fráma don tríú barra",
+    "Carachtar fráma ceart don tríú barra",
+    "Téacs faisnéise don tríú",
+    "Scríobh conas a léiríonn do théacs faisnéise don dara ceann reatha. {0} don soicind reatha as 60 tríú.",
+    "Ligeann sé seo duit an tríú dath rampa a chumrú",
+    "Dath an Tríú Barra",
+    "Íosleibhéal dath dearg don tríú",
+    "Íosleibhéal dath glas don tríú",
+    "Íosleibhéal dath gorm don tríú",
+    "Leibhéal dath íosta don tríú",
+    "Uasleibhéal dath dearg don tríú",
+    "Uasleibhéal dath glas don tríú",
+    "Uasleibhéal dath gorm don tríú",
+    "Uasleibhéal datha don tríú",
+    "Roghnóidh Progresses dathanna randamacha má tá sé cumasaithe. Seachas sin, bain úsáid as dathanna ó config.",
+    "Má tá rothaíocht dathanna cumasaithe, cé mhéad tic sula n-athraítear dathanna in Progresses? 1 tic = 0.5 sa tríú háit"
   ]
 }
