--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ltn.json
@@ -4312,6 +4312,109 @@
     "Color machinis ex Zorin OS, spinoff privatus systematis operantis Linux popularis, Ubuntu",
     "Extras - Chemistry",
     "Extras - Mods",
-    "Extras - Icones"
+    "Extras - Icones",
+    "Quae cultura adhibetur ut nomina, calendarium, mutare mensem, etc.?",
+    "Admitte 'Protocollum Nitrocidum' contenta",
+    "Protocollum nitrocidum dat' contenta in dextra parte tentorii.",
+    "Admitte 'Protocollum Nitrocidum' RSS feed",
+    "Protocollum nitrocidum dat RSS feed content in dextra parte tentorii.",
+    "'Protocollum Nitrocidum' content",
+    "Partem quandam eligit quae in 'Protocollo Nitrocido' ostendetur.",
+    "Notification terminus occasus",
+    "Hoc concedit notitia ut terminus configurare",
+    "General terminus occasus",
+    "Hoc sino vos ut terminus communis configurare",
+    "Aspectus occasus",
+    "Hoc sino vos ad horarum aggerem specie configurare",
+    "Hoc sino vos color configurare horas aggerem",
+    "Hoc sino vos configurare minutas aggerem specie",
+    "Hoc sino vos configurare minutas aggerem color",
+    "Hoc concedit tibi aggerem specie secunda configurare",
+    "Hoc concedit tibi aggerem color secundus configurare",
+    "Initium positio color occasus",
+    "Hoc permittit ut satus situ configurare colorum",
+    "Finis positus color occasus",
+    "Hoc sino vos ad configurare in fine positio colorum",
+    "Aggerem bar occasus",
+    "Hoc sino vos configurare aggerem vectis",
+    "Hoc sino vos ad configurare aggerem specie",
+    "Hoc concedit tibi aggerem colorum configurare",
+    "Gradiente satus occasus",
+    "Hoc sino vos satus CLIVUS colores configurare",
+    "Gradiente finem occasus",
+    "Hoc sino vos ad finem CLIVUS configurare colores",
+    "Maximum background color gradu",
+    "Maximum background color massa. Valor minimus acceptus 0 est, maximus valor acceptus 255 est.",
+    "Maximum linea color gradu",
+    "Maximum color lineae planum. Valor minimus acceptus 0 est, maximus valor acceptus 255 est.",
+    "Maximum text color gradu",
+    "Maximum textum color massa. Valor minimus acceptus 0 est, maximus valor acceptus 255 est.",
+    "Utere ratio culturae",
+    "Utrum screensaver utitur culturae ad nucleos praecipuos occasus vel hac occasus Screensaver.",
+    "Hoc tibi concedit primam speciem configurare aggerem",
+    "Informationes textu pro prima",
+    "Scribe quomodo textus informationes tuae pro hora currenti demonstrat. {0} hora currenti ex 24 prima.",
+    "Superioris sinistram characterem ad primam vectem",
+    "Superioris recti anguli mores primi bar",
+    "Inferius left anguli ad mores primi talea",
+    "Inferior ius anguli ad mores primi talea",
+    "Mores superiores primi vectes",
+    "Ingenium inferiorem frame ad primum talea",
+    "Ad mores frame sinistra prima talea",
+    "Mores recti corporis primi bar",
+    "Hoc tibi concedit primo aggerem color configurare",
+    "Color primae Bar",
+    "Minimum rufus color gradu primo",
+    "Minimum viridis color gradu primo",
+    "Minimum hyacintho color gradu ad primum",
+    "Minimum color gradu ad primum",
+    "Maximum rubrum colorem primo gradu",
+    "Maximum viridis coloris gradum primum",
+    "Maximum caeruleum colorem primum",
+    "Maximum colorem gradu primo",
+    "Hoc permittit ut secundam aggeris speciem configurare",
+    "Informationes textu pro secundo",
+    "Scribe quomodo textus informationes tuae pro momento currenti ostendit. {0} momento currenti ex 60 secundo.",
+    "Superius left angulus character in secundo talea",
+    "Superioris anguli recti mores in secundo talea",
+    "Inferius sinistram anguli ad alterum talea mores",
+    "Inferius anguli recti mores ad alterum talea",
+    "Mores superioris corporis ad alterum talea",
+    "Infra mores frame ad alterum talea",
+    "Relinquitur ingenium in secundo talea",
+    "Mores recti frame ad secundum vectem",
+    "Hoc tibi concedit secundum aggerem color configurare",
+    "Color secundi Bar",
+    "Minimum rufus color gradu in secundo",
+    "Minimum viridis color gradu secundo",
+    "Minimum hyacintho color gradu in secundo",
+    "Minimum color gradu in secundo",
+    "Maximum rubrum colorem gradu secundo",
+    "Maximum viridis colore gradu secundo",
+    "Maximum caeruleum colorem gradu secundo",
+    "Maximum colorem gradu secundo",
+    "Hoc permittit ut tertiam aggerem specie configuraremus",
+    "Superius left angulus character pro tertio talea",
+    "Superioris recti anguli mores in tertium talea",
+    "Inferior left angulus character pro tertio talea",
+    "Mores anguli recti inferioris ad tertium talea",
+    "Mores superioris in tertiam vectem",
+    "Mores frame ad inferiorem tertiam vectem",
+    "Tertius character vectes frame sinistram",
+    "Mores recti ad tertiam vectem",
+    "Informationes textus pro tertio",
+    "Scribe quomodo textus informationes tuas pro secunda currenti ostendit. {0} currente secundo ex 60 tertio.",
+    "Hoc tibi concedit tertium aggerem color configurare",
+    "Color Tertii Bar",
+    "Minimum rubrum colorem tertio gradu",
+    "Minimum viridis colore gradu tertio",
+    "Minimum caeruleum colorem tertium",
+    "Minimum color gradu ad tertium",
+    "Maximum rubrum colorem tertio gradu",
+    "Maximum viridis coloris gradu tertio",
+    "Maximum caeruleum colorem tertium",
+    "Maximum colorem gradu tertio",
+    "Progressiones temere colores eligent si idoneus est. Alioquin colore config uti.",
+    "Si color cyclus efficitur, quot ricini ante mutantur colores in progressionibus? 1 ricinum = 0.5 tertium"
   ]
 }
