--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/mal.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/mal.json
@@ -4312,6 +4312,109 @@
     "Skim warna daripada Zorin OS, spinoff tidak rasmi sistem pengendalian Linux yang popular, Ubuntu",
     "Tambahan - Kimia",
     "Tambahan - Mod",
-    "Tambahan - Ikon"
+    "Tambahan - Ikon",
+    "Budaya manakah yang digunakan untuk menukar nama bulan, kalendar, dsb.?",
+    "Dayakan widget 'The Nitrocid Homepage'",
+    "Mendayakan widget 'The Nitrocid Homepage' di sebelah kanan skrin.",
+    "Dayakan suapan RSS 'The Nitrocid Homepage'",
+    "Mendayakan widget suapan RSS 'The Nitrocid Homepage' di sebelah kanan skrin.",
+    "Widget 'The Nitrocid Homepage'",
+    "Memilih widget yang akan dipaparkan dalam 'The Nitrocid Homepage'.",
+    "Tetapan sempadan pemberitahuan",
+    "Ini membolehkan anda mengkonfigurasi sempadan pemberitahuan",
+    "Tetapan sempadan am",
+    "Ini membolehkan anda mengkonfigurasi sempadan umum",
+    "Tetapan penampilan",
+    "Ini membolehkan anda mengkonfigurasi penampilan tanjakan jam",
+    "Ini membolehkan anda mengkonfigurasi warna tanjakan jam",
+    "Ini membolehkan anda mengkonfigurasi penampilan tanjakan minit",
+    "Ini membolehkan anda mengkonfigurasi warna tanjakan minit",
+    "Ini membolehkan anda mengkonfigurasi penampilan tanjakan saat",
+    "Ini membolehkan anda mengkonfigurasi warna tanjakan saat",
+    "Mulakan tetapan warna kedudukan",
+    "Ini membolehkan anda mengkonfigurasi warna kedudukan mula",
+    "Tetapan warna kedudukan tamat",
+    "Ini membolehkan anda mengkonfigurasi warna kedudukan akhir",
+    "Tetapan bar tanjakan",
+    "Ini membolehkan anda mengkonfigurasi bar tanjakan",
+    "Ini membolehkan anda mengkonfigurasi rupa tanjakan",
+    "Ini membolehkan anda mengkonfigurasi warna tanjakan",
+    "Tetapan permulaan kecerunan",
+    "Ini membolehkan anda mengkonfigurasi warna kecerunan permulaan",
+    "Tetapan akhir kecerunan",
+    "Ini membolehkan anda mengkonfigurasi warna kecerunan akhir",
+    "Tahap warna latar belakang maksimum",
+    "Tahap warna latar belakang maksimum. Nilai minimum yang diterima ialah 0 dan nilai maksimum yang diterima ialah 255.",
+    "Tahap warna garisan maksimum",
+    "Tahap warna garisan maksimum. Nilai minimum yang diterima ialah 0 dan nilai maksimum yang diterima ialah 255.",
+    "Tahap warna teks maksimum",
+    "Tahap warna teks maksimum. Nilai minimum yang diterima ialah 0 dan nilai maksimum yang diterima ialah 255.",
+    "Gunakan budaya sistem",
+    "Sama ada penyelamat skrin menggunakan budaya yang ditetapkan oleh tetapan kernel utama atau oleh tetapan penyelamat skrin ini.",
+    "Ini membolehkan anda mengkonfigurasi penampilan ramp pertama",
+    "Teks maklumat untuk pertama",
+    "Tulis bagaimana teks maklumat anda untuk jam semasa ditunjukkan. {0} untuk jam semasa daripada 24 dahulu.",
+    "Aksara sudut kiri atas untuk bar pertama",
+    "Aksara sudut kanan atas untuk bar pertama",
+    "Aksara sudut kiri bawah untuk bar pertama",
+    "Aksara sudut kanan bawah untuk bar pertama",
+    "Aksara bingkai atas untuk bar pertama",
+    "Aksara bingkai bawah untuk bar pertama",
+    "Watak bingkai kiri untuk bar pertama",
+    "Watak bingkai kanan untuk bar pertama",
+    "Ini membolehkan anda mengkonfigurasi warna tanjakan pertama",
+    "Warna Bar Pertama",
+    "Tahap warna merah minimum untuk pertama",
+    "Tahap warna hijau minimum untuk pertama",
+    "Tahap warna biru minimum untuk pertama",
+    "Tahap warna minimum untuk pertama",
+    "Tahap warna merah maksimum untuk yang pertama",
+    "Tahap warna hijau maksimum untuk pertama",
+    "Tahap warna biru maksimum untuk pertama",
+    "Tahap warna maksimum untuk pertama",
+    "Ini membolehkan anda mengkonfigurasi penampilan tanjakan kedua",
+    "Teks maklumat untuk kedua",
+    "Tulis bagaimana teks maklumat anda untuk minit semasa ditunjukkan. {0} untuk minit semasa daripada 60 saat.",
+    "Aksara sudut kiri atas untuk bar kedua",
+    "Aksara sudut kanan atas untuk bar kedua",
+    "Aksara sudut kiri bawah untuk bar kedua",
+    "Aksara sudut kanan bawah untuk bar kedua",
+    "Aksara bingkai atas untuk bar kedua",
+    "Aksara bingkai bawah untuk bar kedua",
+    "Watak bingkai kiri untuk bar kedua",
+    "Watak bingkai kanan untuk bar kedua",
+    "Ini membolehkan anda mengkonfigurasi warna tanjakan kedua",
+    "Warna Bar Kedua",
+    "Tahap warna merah minimum untuk saat",
+    "Tahap warna hijau minimum untuk saat",
+    "Tahap warna biru minimum untuk saat",
+    "Tahap warna minimum untuk saat",
+    "Tahap warna merah maksimum untuk saat",
+    "Tahap warna hijau maksimum untuk saat",
+    "Tahap warna biru maksimum untuk saat",
+    "Tahap warna maksimum untuk saat",
+    "Ini membolehkan anda mengkonfigurasi penampilan tanjakan ketiga",
+    "Aksara sudut kiri atas untuk bar ketiga",
+    "Aksara sudut kanan atas untuk bar ketiga",
+    "Aksara sudut kiri bawah untuk bar ketiga",
+    "Aksara sudut kanan bawah untuk bar ketiga",
+    "Aksara bingkai atas untuk bar ketiga",
+    "Aksara bingkai bawah untuk bar ketiga",
+    "Watak bingkai kiri untuk bar ketiga",
+    "Watak bingkai kanan untuk bar ketiga",
+    "Teks maklumat untuk ketiga",
+    "Tulis bagaimana teks maklumat anda untuk detik semasa ditunjukkan. {0} untuk kedua semasa daripada 60 pertiga.",
+    "Ini membolehkan anda mengkonfigurasi warna tanjakan ketiga",
+    "Warna Bar Ketiga",
+    "Tahap warna merah minimum untuk ketiga",
+    "Tahap warna hijau minimum untuk ketiga",
+    "Tahap warna biru minimum untuk ketiga",
+    "Tahap warna minimum untuk ketiga",
+    "Tahap warna merah maksimum untuk ketiga",
+    "Tahap warna hijau maksimum untuk ketiga",
+    "Tahap warna biru maksimum untuk ketiga",
+    "Tahap warna maksimum untuk ketiga",
+    "Kemajuan akan memilih warna rawak jika didayakan. Jika tidak, gunakan warna daripada config.",
+    "Jika kitaran warna didayakan, berapa tanda kutu sebelum menukar warna dalam Progress? 1 tanda = 0.5 pertiga"
   ]
 }
