--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/spa.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/spa.json
@@ -4312,6 +4312,109 @@
     "Esquemas de color de Zorin OS, una versión no oficial de un popular sistema operativo Linux, Ubuntu",
     "Extras - Química",
     "Extras - Mods",
-    "Extras - Iconos"
+    "Extras - Iconos",
+    "¿Qué cultura se está utilizando para cambiar los nombres de los meses, el calendario, etc.?",
+    "Habilitar los widgets de 'The Nitrocid Homepage'",
+    "Habilita los widgets de 'The Nitrocid Homepage' en el lado derecho de la pantalla.",
+    "Habilitar la fuente RSS de 'The Nitrocid Homepage'",
+    "Habilita el widget de fuente RSS de 'The Nitrocid Homepage' en el lado derecho de la pantalla.",
+    "Widget 'The Nitrocid Homepage'",
+    "Selecciona un widget que se mostrará en 'The Nitrocid Homepage'.",
+    "Ajustes del borde de notificación",
+    "Esto le permite configurar el borde de notificación",
+    "Ajustes generales del borde",
+    "Esto le permite configurar el borde general",
+    "Ajustes de apariencia",
+    "Esto le permite configurar la apariencia de la rampa de horas",
+    "Esto le permite configurar el color de la rampa de horas",
+    "Esto le permite configurar la apariencia de la rampa de minutos",
+    "Esto le permite configurar el color de la rampa de minutos",
+    "Esto le permite configurar la apariencia de la rampa de segundos",
+    "Esto le permite configurar el color de la rampa de segundos",
+    "Ajustes de color de la posición inicial",
+    "Esto le permite configurar los colores de la posición inicial",
+    "Ajustes de color de la posición final",
+    "Esto le permite configurar los colores de la posición final",
+    "Ajustes de la barra de rampa",
+    "Esto le permite configurar la barra de rampa",
+    "Esto le permite configurar la apariencia de la rampa",
+    "Esto le permite configurar los colores de la rampa",
+    "Ajustes de inicio del degradado",
+    "Esto le permite configurar los colores del degradado inicial",
+    "Ajustes de fin del degradado",
+    "Esto le permite configurar los colores del degradado final",
+    "Nivel máximo de color de fondo",
+    "Nivel máximo de color de fondo. El valor mínimo aceptado es 0 y el valor máximo aceptado es 255.",
+    "Nivel máximo de color de línea",
+    "Nivel máximo de color de línea. El valor mínimo aceptado es 0 y el valor máximo aceptado es 255.",
+    "Nivel máximo de color del texto",
+    "Nivel máximo de color del texto. El valor mínimo aceptado es 0 y el valor máximo aceptado es 255.",
+    "Usar la cultura del sistema",
+    "Si el protector de pantalla utiliza la cultura establecida por la configuración principal del núcleo o por esta configuración del protector de pantalla.",
+    "Esto le permite configurar la apariencia de la primera rampa",
+    "Texto de información para la primera",
+    "Escriba cómo se muestra el texto de información para la hora actual. {0} para la hora actual de 24 primeras.",
+    "Carácter de la esquina superior izquierda para la primera barra",
+    "Carácter de la esquina superior derecha para la primera barra",
+    "Carácter de la esquina inferior izquierda para la primera barra",
+    "Carácter de la esquina inferior derecha para la primera barra",
+    "Carácter del marco superior para la primera barra",
+    "Carácter del marco inferior para la primera barra",
+    "Carácter del marco izquierdo para la primera barra",
+    "Carácter del marco derecho para la primera barra",
+    "Esto le permite configurar el color de la primera rampa",
+    "Color de la primera barra",
+    "Nivel mínimo de color rojo para la primera",
+    "Nivel mínimo de color verde para la primera",
+    "Nivel mínimo de color azul para la primera",
+    "Nivel mínimo de color para la primera",
+    "Nivel máximo de color rojo para la primera",
+    "Nivel máximo de color verde para la primera",
+    "Nivel máximo de color azul para la primera",
+    "Nivel máximo de color para la primera",
+    "Esto le permite configurar la apariencia de la segunda rampa",
+    "Texto de información para la segunda",
+    "Escriba cómo se muestra el texto de información para el minuto actual. {0} para el minuto actual de 60 segundos.",
+    "Carácter de la esquina superior izquierda para la segunda barra",
+    "Carácter de la esquina superior derecha para la segunda barra",
+    "Carácter de la esquina inferior izquierda para la segunda barra",
+    "Carácter de la esquina inferior derecha para la segunda barra",
+    "Carácter del marco superior para la segunda barra",
+    "Carácter del marco inferior para la segunda barra",
+    "Carácter del marco izquierdo para la segunda barra",
+    "Carácter del marco derecho para la segunda barra",
+    "Esto le permite configurar el segundo color de rampa",
+    "Color de la segunda barra",
+    "Nivel mínimo de color rojo para la segunda",
+    "Nivel mínimo de color verde para la segunda",
+    "Nivel mínimo de color azul para la segunda",
+    "Nivel mínimo de color para la segunda",
+    "Nivel máximo de color rojo para la segunda",
+    "Nivel máximo de color verde para la segunda",
+    "Nivel máximo de color azul para la segunda",
+    "Nivel máximo de color para la segunda",
+    "Esto le permite configurar la apariencia de la tercera rampa",
+    "Carácter de la esquina superior izquierda para la tercera barra",
+    "Carácter de la esquina superior derecha para la tercera barra",
+    "Carácter de la esquina inferior izquierda para la tercera barra",
+    "Carácter de la esquina inferior derecha para la tercera barra",
+    "Carácter del marco superior para la tercera barra",
+    "Carácter del marco inferior para la tercera barra",
+    "Carácter del marco izquierdo para la tercera barra",
+    "Carácter del marco derecho para la tercera barra",
+    "Texto de información para el tercero",
+    "Escribe cómo se muestra el texto de información para el segundo actual. {0} para el segundo actual de 60 terceros.",
+    "Esto te permite configurar el color de la rampa del tercero",
+    "Color de la barra del tercero",
+    "Nivel mínimo de color rojo para el tercero",
+    "Nivel mínimo de color verde para el tercero",
+    "Nivel mínimo de color azul para el tercero",
+    "Nivel mínimo de color para el tercero",
+    "Nivel máximo de color rojo para el tercero",
+    "Nivel máximo de color verde para el tercero",
+    "Nivel máximo de color azul para el tercero",
+    "Nivel máximo de color para el tercero",
+    "Progresses seleccionará colores aleatorios si está habilitado. De lo contrario, usa los colores de la configuración.",
+    "Si el ciclo de color está habilitado, ¿cuántos ticks antes de cambiar los colores en Progresses? 1 tick = 0,5 tercios"
   ]
 }
