--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/tky.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/tky.json
@@ -4312,6 +4312,109 @@
     "Popüler bir Linux işletim sistemi olan Ubuntu'nun resmi olmayan bir yan ürünü olan Zorin OS'den renk şemaları",
     "Ekstralar - Kimya",
     "Ekstralar - Modlar",
-    "Ekstralar - Simgeler"
+    "Ekstralar - Simgeler",
+    "Ay adlarını, takvimi vb. değiştirmek için hangi kültür kullanılıyor?",
+    "'Nitrocid Ana Sayfası' widget'larını etkinleştir",
+    "Ekranın sağ tarafındaki 'Nitrocid Ana Sayfası' widget'larını etkinleştirir.",
+    "'Nitrocid Ana Sayfası' RSS beslemesini etkinleştir",
+    "Ekranın sağ tarafındaki 'Nitrocid Ana Sayfası' RSS besleme widget'ını etkinleştirir.",
+    "'Nitrocid Ana Sayfası' widget'ı",
+    "'Nitrocid Ana Sayfası'nda görüntülenecek bir widget'ı seçer.",
+    "Bildirim kenarlığı ayarları",
+    "Bu, bildirim kenarlığını yapılandırmanıza olanak tanır",
+    "Genel kenarlık ayarları",
+    "Bu, genel kenarlığı yapılandırmanıza olanak tanır",
+    "Görünüm ayarları",
+    "Bu, saat rampa görünümünü yapılandırmanıza olanak tanır",
+    "Bu, saat rampa rengini yapılandırmanıza olanak tanır",
+    "Bu, dakika rampa görünümünü yapılandırmanıza olanak tanır",
+    "Bu, dakika rampa rengini yapılandırmanıza olanak tanır",
+    "Bu, saniye rampa görünümünü yapılandırmanıza olanak tanır",
+    "Bu, saniye rampa rengini yapılandırmanıza olanak tanır",
+    "Başlangıç konumu renk ayarları",
+    "Bu, başlangıç konumu renklerini yapılandırmanıza olanak tanır",
+    "Bitiş konumu renk ayarları",
+    "Bu, bitiş konumu renklerini yapılandırmanıza olanak tanır",
+    "Rampa çubuğu ayarları",
+    "Bu, rampa çubuğunu yapılandırmanıza olanak tanır",
+    "Bu, rampa görünümünü yapılandırmanıza olanak tanır",
+    "Bu, rampa renklerini yapılandırmanıza olanak tanır",
+    "Degrade başlangıç ayarları",
+    "Bu, başlangıç degrade renklerini yapılandırmanıza olanak tanır",
+    "Degrade bitiş ayarları",
+    "Bu, bitiş degrade renklerini yapılandırmanıza olanak tanır",
+    "Maksimum arka plan renk seviyesi",
+    "Maksimum arka plan renk seviyesi. Kabul edilen minimum değer 0 ve kabul edilen maksimum değer 255'tir.",
+    "Maksimum çizgi renk seviyesi",
+    "Maksimum çizgi renk seviyesi. Kabul edilen en düşük değer 0 ve kabul edilen en yüksek değer 255'tir.",
+    "Maksimum metin renk seviyesi",
+    "Maksimum metin renk seviyesi. Kabul edilen en düşük değer 0 ve kabul edilen en yüksek değer 255'tir.",
+    "Sistem kültürünü kullan",
+    "Ekran koruyucunun ana çekirdek ayarları veya bu ekran koruyucu ayarları tarafından ayarlanan kültürü kullanıp kullanmadığı.",
+    "Bu, ilk rampa görünümünü yapılandırmanıza olanak tanır",
+    "İlk için bilgi metni",
+    "Geçerli saat için bilgi metninizin nasıl gösterildiğini yazın. 24'ten {0} geçerli saat için. İlk çubuk için sol üst köşe karakteri",
+    "İlk çubuk için sol üst köşe karakteri",
+    "İlk çubuk için sağ üst köşe karakteri",
+    "İlk çubuk için sol alt köşe karakteri",
+    "İlk çubuk için sağ alt köşe karakteri",
+    "İlk çubuk için üst çerçeve karakteri",
+    "İlk çubuk için alt çerçeve karakteri",
+    "İlk çubuk için sol çerçeve karakteri",
+    "İlk çubuk için sağ çerçeve karakteri",
+    "Bu, ilk rampa rengini yapılandırmanıza olanak tanır",
+    "İlk Çubuğun Rengi",
+    "İlk için minimum kırmızı renk seviyesi",
+    "İlk için minimum yeşil renk seviyesi",
+    "İlk için minimum mavi renk seviyesi",
+    "İlk için minimum renk seviyesi",
+    "İlk için maksimum kırmızı renk seviyesi",
+    "İlk için maksimum yeşil renk seviyesi",
+    "İlk için maksimum mavi renk seviyesi",
+    "İlk için maksimum renk seviyesi",
+    "Bu, ikinci rampa görünümünü yapılandırmanıza olanak tanır",
+    "İkinci için bilgi metni",
+    "Geçerli dakika için bilgi metninizin nasıl gösterildiğini yazın. 60 saniyeden geçerli dakika için {0}. İkinci çubuk için sol üst köşe karakteri",
+    "İkinci çubuk için sol üst köşe karakteri",
+    "İkinci çubuk için sağ üst köşe karakteri",
+    "İkinci çubuk için sol alt köşe karakteri",
+    "İkinci çubuk için sağ alt köşe karakteri",
+    "İkinci çubuk için üst çerçeve karakteri",
+    "İkinci çubuk için alt çerçeve karakteri",
+    "İkinci çubuk için sol çerçeve karakteri",
+    "İkinci çubuk için sağ çerçeve karakteri",
+    "Bu, ikinci rampa rengini yapılandırmanıza olanak tanır",
+    "İkinci Çubuğun Rengi",
+    "İkinci için minimum kırmızı renk seviyesi",
+    "İkinci için minimum yeşil renk seviyesi",
+    "İkinci için minimum mavi renk seviyesi",
+    "İkinci için minimum renk seviyesi",
+    "İkinci için maksimum kırmızı renk seviyesi",
+    "İkinci için maksimum yeşil renk seviyesi",
+    "İkinci için maksimum mavi renk seviyesi",
+    "İkinci için maksimum renk seviyesi",
+    "Bu, üçüncü rampa görünümünü yapılandırmanıza olanak tanır",
+    "Üçüncü çubuk için sol üst köşe karakteri",
+    "Üçüncü çubuk için sağ üst köşe karakteri",
+    "Üçüncü çubuk için sol alt köşe karakteri",
+    "Üçüncü çubuk için sağ alt köşe karakteri",
+    "Üçüncü çubuk için üst çerçeve karakteri",
+    "Üçüncü çubuk için alt çerçeve karakteri",
+    "Üçüncü çubuk için sol çerçeve karakteri bar",
+    "Üçüncü çubuk için sağ çerçeve karakteri",
+    "Üçüncü için bilgi metni",
+    "Geçerli saniye için bilgi metninizin nasıl gösterildiğini yazın. 60 üçüncüden geçerli saniye için {0}.",
+    "Bu, üçüncü rampa rengini yapılandırmanıza olanak tanır",
+    "Üçüncü Çubuğun Rengi",
+    "Üçüncü için minimum kırmızı renk seviyesi",
+    "Üçüncü için minimum yeşil renk seviyesi",
+    "Üçüncü için minimum mavi renk seviyesi",
+    "Üçüncü için minimum renk seviyesi",
+    "Üçüncü için maksimum kırmızı renk seviyesi",
+    "Üçüncü için maksimum yeşil renk seviyesi",
+    "Üçüncü için maksimum mavi renk seviyesi",
+    "Üçüncü için maksimum renk seviyesi",
+    "Progresses, etkinleştirilirse rastgele renkler seçecektir. Aksi takdirde, yapılandırmadaki renkleri kullanın.",
+    "Renk döngüsü etkinleştirilirse, Progresses'ta renkleri değiştirmeden önce kaç tik var? 1 tik = 0,5 üçüncü"
   ]
 }
