--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ukr.json
@@ -4312,6 +4312,109 @@
     "Схеми кольорів від Zorin OS, неофіційного допоміжного продукту популярної операційної системи Linux Ubuntu",
     "Додатково - Хімія",
     "Додатково - Моди",
-    "Додатково - іконки"
+    "Додатково - іконки",
+    "Яка культура використовується для зміни назв місяців, календаря тощо?",
+    "Увімкніть віджети «Домашня сторінка Nitrocid».",
+    "Вмикає віджети «Домашня сторінка Nitrocid» у правій частині екрана.",
+    "Увімкнути RSS-канал «Домашньої сторінки Nitrocid».",
+    "Вмикає віджет RSS-каналу «Домашня сторінка Nitrocid» у правій частині екрана.",
+    "Віджет «Домашня сторінка Nitrocid».",
+    "Вибирає віджет, який відображатиметься на «Домашній сторінці Nitrocid».",
+    "Налаштування рамок сповіщень",
+    "Це дозволяє налаштувати межу сповіщень",
+    "Загальні налаштування меж",
+    "Це дозволяє налаштувати загальну межу",
+    "Налаштування зовнішнього вигляду",
+    "Це дозволяє налаштувати вигляд годинника",
+    "Це дозволяє налаштувати колір годинника",
+    "Це дає змогу налаштувати вигляд зміни хвилин",
+    "Це дозволяє налаштувати колір зміни хвилин",
+    "Це дозволяє налаштувати вигляд секундної рампи",
+    "Це дозволяє налаштувати колір секундної рампи",
+    "Параметри кольору початкової позиції",
+    "Це дозволяє налаштувати кольори початкової позиції",
+    "Параметри кольору кінцевої позиції",
+    "Це дозволяє налаштувати кольори кінцевої позиції",
+    "Налаштування рампи",
+    "Це дозволяє налаштувати панель рампи",
+    "Це дозволяє налаштувати зовнішній вигляд рампи",
+    "Це дозволяє налаштувати кольори рампи",
+    "Параметри початку градієнта",
+    "Це дозволяє налаштувати початкові кольори градієнта",
+    "Налаштування кінця градієнта",
+    "Це дозволяє налаштувати кольори кінцевого градієнта",
+    "Максимальний рівень кольору фону",
+    "Максимальний рівень кольору фону. Мінімальне допустиме значення — 0, а максимальне — 255.",
+    "Максимальний рівень кольору лінії",
+    "Максимальний рівень кольору лінії. Мінімальне допустиме значення — 0, а максимальне — 255.",
+    "Максимальний рівень кольору тексту",
+    "Максимальний рівень кольору тексту. Мінімальне допустиме значення — 0, а максимальне — 255.",
+    "Використовуйте системну культуру",
+    "Чи використовує заставка культуру, встановлену основними налаштуваннями ядра чи налаштуваннями цієї заставки.",
+    "Це дозволяє налаштувати вигляд першої рампи",
+    "Інформаційний текст для першого",
+    "Напишіть, як виглядає ваш інформаційний текст на поточну годину. Спочатку {0} за поточну годину з 24.",
+    "Символ верхнього лівого кута для першого рядка",
+    "Символ верхнього правого кута для першого рядка",
+    "Символ нижнього лівого кута для першого рядка",
+    "Символ нижнього правого кута для першого рядка",
+    "Символ верхнього кадру для першого такту",
+    "Символ нижнього кадру для першого такту",
+    "Символ лівого кадру для першого такту",
+    "Символ правого кадру для першого такту",
+    "Це дозволяє налаштувати перший колір рампи",
+    "Колір першої смуги",
+    "Мінімальний рівень червоного кольору для першого",
+    "Мінімальний рівень зеленого кольору для першого",
+    "Мінімальний рівень синього кольору для першого",
+    "Мінімальний рівень кольору для першого",
+    "Максимальний рівень червоного кольору для першого",
+    "Максимальний рівень зеленого кольору для першого",
+    "Максимальний рівень синього кольору для першого",
+    "Максимальний рівень кольору для першого",
+    "Це дозволяє налаштувати вигляд другої рампи",
+    "Інформаційний текст для другого",
+    "Напишіть, як виглядає ваш інформаційний текст за поточну хвилину. {0} за поточну хвилину з 60 секунд.",
+    "Символ верхнього лівого кута для другої смуги",
+    "Символ верхнього правого кута для другої панелі",
+    "Символ нижнього лівого кута для другої смуги",
+    "Символ нижнього правого кута для другої смуги",
+    "Символ верхньої рамки для другого рядка",
+    "Символ нижньої рамки для другого рядка",
+    "Символ лівого кадру для другого рядка",
+    "Символ правої рамки для другої смуги",
+    "Це дозволяє налаштувати другий колір рампи",
+    "Колір другої смуги",
+    "Мінімальний рівень червоного кольору для секунди",
+    "Мінімальний рівень зеленого кольору для секунди",
+    "Мінімальний рівень синього кольору для другого",
+    "Мінімальний рівень кольору для секунди",
+    "Максимальний рівень червоного кольору для секунди",
+    "Максимальний рівень зеленого кольору для секунди",
+    "Максимальний рівень синього кольору для секунди",
+    "Максимальний рівень кольору для секунди",
+    "Це дозволяє налаштувати зовнішній вигляд третьої рампи",
+    "Символ верхнього лівого кута для третьої смуги",
+    "Символ верхнього правого кута для третьої смуги",
+    "Символ нижнього лівого кута для третьої смуги",
+    "Символ нижнього правого кута для третьої смуги",
+    "Символ верхньої рамки для третьої такти",
+    "Символ нижньої рамки для третього такту",
+    "Символ лівого кадру для третьої такти",
+    "Символ правої рамки для третьої такти",
+    "Інформаційний текст для третього",
+    "Напишіть, як виглядає ваш інформаційний текст за поточну секунду. {0} для поточного другого з 60 третіх.",
+    "Це дозволяє налаштувати третій колір рампи",
+    "Колір третьої смуги",
+    "Мінімальний рівень червоного кольору для третього",
+    "Мінімальний рівень зеленого кольору для третього",
+    "Мінімальний рівень синього кольору для третього",
+    "Мінімальний рівень кольору для третього",
+    "Максимальний рівень червоного кольору для третього",
+    "Максимальний рівень зеленого кольору для третього",
+    "Максимальний рівень синього кольору для третього",
+    "Максимальний рівень кольору для третього",
+    "Прогрес вибере випадкові кольори, якщо це ввімкнено. В іншому випадку використовуйте кольори з конфігурації.",
+    "Якщо зміну кольорів увімкнено, скільки позначок перед зміною кольорів у прогресі? 1 тик = 0,5 третини"
   ]
 }
