--- a/public/Nitrocid/Resources/Languages/eng.json
+++ b/public/Nitrocid/Resources/Languages/eng.json
@@ -4312,6 +4312,109 @@
     "Color schemes from Zorin OS, an unofficial spinoff of a popular Linux operating system, Ubuntu",
     "Extras - Chemistry",
     "Extras - Mods",
-    "Extras - Icons"
+    "Extras - Icons",
+    "Which culture is being used to change the month names, calendar, etc.?",
+    "Enable 'The Nitrocid Homepage' widgets",
+    "Enables 'The Nitrocid Homepage' widgets at the right side of the screen.",
+    "Enable 'The Nitrocid Homepage' RSS feed",
+    "Enables 'The Nitrocid Homepage' RSS feed widget at the right side of the screen.",
+    "'The Nitrocid Homepage' widget",
+    "Selects a widget that will be displayed in 'The Nitrocid Homepage'.",
+    "Notification border settings",
+    "This allows you to configure the notification border",
+    "General border settings",
+    "This allows you to configure the general border",
+    "Appearance settings",
+    "This allows you to configure the hours ramp appearance",
+    "This allows you to configure the hours ramp color",
+    "This allows you to configure the minutes ramp appearance",
+    "This allows you to configure the minutes ramp color",
+    "This allows you to configure the seconds ramp appearance",
+    "This allows you to configure the seconds ramp color",
+    "Start position color settings",
+    "This allows you to configure the start position colors",
+    "End position color settings",
+    "This allows you to configure the end position colors",
+    "Ramp bar settings",
+    "This allows you to configure the ramp bar",
+    "This allows you to configure the ramp appearance",
+    "This allows you to configure the ramp colors",
+    "Gradient start settings",
+    "This allows you to configure the start gradient colors",
+    "Gradient end settings",
+    "This allows you to configure the end gradient colors",
+    "Maximum background color level",
+    "Maximum background color level. The minimum accepted value is 0 and the maximum accepted value is 255.",
+    "Maximum line color level",
+    "Maximum line color level. The minimum accepted value is 0 and the maximum accepted value is 255.",
+    "Maximum text color level",
+    "Maximum text color level. The minimum accepted value is 0 and the maximum accepted value is 255.",
+    "Use the system culture",
+    "Whether the screensaver uses the culture set by the main kernel settings or by this screensaver settings.",
+    "This allows you to configure the first ramp appearance",
+    "Information text for first",
+    "Write how your information text for the current hour shows. {0} for current hour out of 24 first.",
+    "Upper left corner character for the first bar",
+    "Upper right corner character for the first bar",
+    "Lower left corner character for the first bar",
+    "Lower right corner character for the first bar",
+    "Upper frame character for the first bar",
+    "Lower frame character for the first bar",
+    "Left frame character for the first bar",
+    "Right frame character for the first bar",
+    "This allows you to configure the first ramp color",
+    "Color of First Bar",
+    "Minimum red color level for first",
+    "Minimum green color level for first",
+    "Minimum blue color level for first",
+    "Minimum color level for first",
+    "Maximum red color level for first",
+    "Maximum green color level for first",
+    "Maximum blue color level for first",
+    "Maximum color level for first",
+    "This allows you to configure the second ramp appearance",
+    "Information text for second",
+    "Write how your information text for the current minute shows. {0} for current minute out of 60 second.",
+    "Upper left corner character for the second bar",
+    "Upper right corner character for the second bar",
+    "Lower left corner character for the second bar",
+    "Lower right corner character for the second bar",
+    "Upper frame character for the second bar",
+    "Lower frame character for the second bar",
+    "Left frame character for the second bar",
+    "Right frame character for the second bar",
+    "This allows you to configure the second ramp color",
+    "Color of Second Bar",
+    "Minimum red color level for second",
+    "Minimum green color level for second",
+    "Minimum blue color level for second",
+    "Minimum color level for second",
+    "Maximum red color level for second",
+    "Maximum green color level for second",
+    "Maximum blue color level for second",
+    "Maximum color level for second",
+    "This allows you to configure the third ramp appearance",
+    "Upper left corner character for the third bar",
+    "Upper right corner character for the third bar",
+    "Lower left corner character for the third bar",
+    "Lower right corner character for the third bar",
+    "Upper frame character for the third bar",
+    "Lower frame character for the third bar",
+    "Left frame character for the third bar",
+    "Right frame character for the third bar",
+    "Information text for third",
+    "Write how your information text for the current second shows. {0} for current second out of 60 third.",
+    "This allows you to configure the third ramp color",
+    "Color of Third Bar",
+    "Minimum red color level for third",
+    "Minimum green color level for third",
+    "Minimum blue color level for third",
+    "Minimum color level for third",
+    "Maximum red color level for third",
+    "Maximum green color level for third",
+    "Maximum blue color level for third",
+    "Maximum color level for third",
+    "Progresses will select random colors if it's enabled. Otherwise, use colors from config.",
+    "If color cycling is enabled, how many ticks before changing colors in Progresses? 1 tick = 0.5 third"
   ]
 }
