--- a/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Addons/Nitrocid.LanguagePacks/Resources/Languages/ptg.json
@@ -4312,6 +4312,109 @@
     "Esquemas de cores do Zorin OS, um spinoff não oficial de um popular sistema operativo Linux, o Ubuntu",
     "Extras - Química",
     "Extras - Mods",
-    "Extras - Ícones"
+    "Extras - Ícones",
+    "Qual a cultura que está a ser utilizada para alterar os nomes dos meses, calendário, etc.?",
+    "Activar widgets 'The Nitrocid Homepage'",
+    "Activa os widgets 'The Nitrocid Homepage' no lado direito do ecrã.",
+    "Activar feed RSS 'The Nitrocid Homepage'",
+    "Ativa o widget de feed RSS 'The Nitrocid Homepage' no lado direito do ecrã.",
+    "Widget 'Nitrocid Home'",
+    "Seleciona um widget que será apresentado na 'Nitrocid Home Page'.",
+    "Definições de borda de notificação",
+    "Isto permite que configure a borda de notificação",
+    "Configurações gerais de bordo",
+    "Isto permite que configure a borda geral",
+    "Configurações de aparência",
+    "Isto permite configurar a aparência da rampa de horas",
+    "Isto permite configurar a cor da rampa de horas",
+    "Isto permite configurar a aparência da rampa de minutos",
+    "Isto permite configurar a cor da rampa de minutos",
+    "Isto permite configurar a aparência da rampa de segundos",
+    "Isto permite configurar a cor da rampa de segundos",
+    "Definições de cor da posição inicial",
+    "Isto permite configurar as cores da posição inicial",
+    "Definições de cor da posição final",
+    "Isto permite configurar as cores da posição final",
+    "Configurações da barra de rampa",
+    "Isto permite que configure a barra de rampa",
+    "Isto permite configurar a aparência da rampa",
+    "Isto permite configurar as cores da rampa",
+    "Definições de início de gradiente",
+    "Isto permite configurar as cores do gradiente inicial",
+    "Definições de final de gradiente",
+    "Isto permite configurar as cores do gradiente final",
+    "Nível máximo de cor de fundo",
+    "Nível máximo de cor de fundo. O valor mínimo aceite é 0 e o valor máximo aceite é 255.",
+    "Nível máximo de cor da linha",
+    "Nível máximo de cor da linha. O valor mínimo aceite é 0 e o valor máximo aceite é 255.",
+    "Nível máximo de cor do texto",
+    "Nível máximo de cor do texto. O valor mínimo aceite é 0 e o valor máximo aceite é 255.",
+    "Utilize a cultura do sistema",
+    "Se o protetor de ecrã utiliza a cultura definida pelas definições principais do kernel ou pelas definições deste protetor de ecrã.",
+    "Isto permite configurar a primeira aparência da rampa",
+    "Texto informativo para o primeiro",
+    "Escreva como é apresentado o seu texto informativo para a hora atual. {0} para a hora atual das 24 primeiras.",
+    "Caracter do canto superior esquerdo para a primeira barra",
+    "Caracter do canto superior direito para a primeira barra",
+    "Caracter do canto inferior esquerdo para a primeira barra",
+    "Caracter do canto inferior direito para a primeira barra",
+    "Caracter do fotograma superior para o primeiro compasso",
+    "Caracter do quadro inferior para o primeiro compasso",
+    "Caracter do fotograma esquerdo para o primeiro compasso",
+    "Caracter de quadro direito para o primeiro compasso",
+    "Isto permite configurar a primeira cor da rampa",
+    "Cor da primeira barra",
+    "Nível mínimo de cor vermelha para o primeiro",
+    "Nível mínimo de cor verde para o primeiro",
+    "Nível mínimo de cor azul para o primeiro",
+    "Nível mínimo de cor para o primeiro",
+    "Nível máximo de cor vermelha para o primeiro",
+    "Nível máximo de cor verde para o primeiro",
+    "Nível máximo de cor azul para o primeiro",
+    "Nível máximo de cor para o primeiro",
+    "Isto permite configurar a aparência da segunda rampa",
+    "Texto informativo para o segundo",
+    "Escreva como é apresentado o seu texto informativo para o minuto atual. {0} para o minuto atual de 60 segundos.",
+    "Caracter do canto superior esquerdo para a segunda barra",
+    "Caracter do canto superior direito para a segunda barra",
+    "Caracter do canto inferior esquerdo para a segunda barra",
+    "Caracter do canto inferior direito para a segunda barra",
+    "Caracter do quadro superior para a segunda barra",
+    "Caracter do quadro inferior para a segunda barra",
+    "Caracter do quadro esquerdo para a segunda barra",
+    "Caracter do quadro direito para a segunda barra",
+    "Isto permite configurar a segunda cor da rampa",
+    "Cor da segunda barra",
+    "Nível mínimo de cor vermelha para o segundo",
+    "Nível mínimo de cor verde para o segundo",
+    "Nível mínimo de cor azul para o segundo",
+    "Nível mínimo de cor para o segundo",
+    "Nível máximo de cor vermelha para o segundo",
+    "Nível máximo de cor verde para o segundo",
+    "Nível máximo de cor azul por segundo",
+    "Nível máximo de cor para o segundo",
+    "Isto permite configurar a aparência da terceira rampa",
+    "Caracter do canto superior esquerdo para a terceira barra",
+    "Caracter do canto superior direito para a terceira barra",
+    "Caracter do canto inferior esquerdo para a terceira barra",
+    "Caracter do canto inferior direito para a terceira barra",
+    "Caracter do fotograma superior para o terceiro compasso",
+    "Caracter do fotograma inferior para o terceiro compasso",
+    "Caracter do fotograma esquerdo para o terceiro compasso",
+    "Caracter do quadro direito para o terceiro compasso",
+    "Texto informativo para o terceiro",
+    "Escreva como é apresentado o seu texto informativo para o segundo atual. {0} para o atual segundo lugar entre 60 terceiros.",
+    "Isto permite configurar a terceira cor da rampa",
+    "Cor da Terceira Barra",
+    "Nível mínimo de cor vermelha para o terceiro",
+    "Nível mínimo de cor verde para o terceiro",
+    "Nível mínimo de cor azul para o terceiro",
+    "Nível mínimo de cor para o terceiro",
+    "Nível máximo de cor vermelha para o terceiro",
+    "Nível máximo de cor verde para o terceiro",
+    "Nível máximo de cor azul para o terceiro",
+    "Nível máximo de cor para o terceiro",
+    "Os progressos selecionarão cores aleatórias se estiverem ativados. Caso contrário, utilize cores da configuração.",
+    "Se o ciclo de cores estiver activado, quantos tiques faltam para alterar as cores no Progresso? 1 tique = 0,5 terços"
   ]
 }
